@@ -1,6 +1,8 @@
 package net.minecraft.server;
 
-import java.util.List;
+import com.google.common.collect.Maps;
+import java.util.Iterator;
+import java.util.Map;
 
 // CraftBukkit start
 import org.bukkit.Location;
@@ -11,17 +13,22 @@ import org.bukkit.event.vehicle.VehicleEntityCollisionEvent;
 import org.bukkit.util.Vector;
 // CraftBukkit end
 
-public abstract class EntityMinecartAbstract extends Entity {
+public abstract class EntityMinecartAbstract extends Entity implements INamableTileEntity {
 
-    private boolean a;
-    private String b;
-    private static final int[][][] matrix = new int[][][] { { { 0, 0, -1}, { 0, 0, 1}}, { { -1, 0, 0}, { 1, 0, 0}}, { { -1, -1, 0}, { 1, 0, 0}}, { { -1, 0, 0}, { 1, -1, 0}}, { { 0, 0, -1}, { 0, -1, 1}}, { { 0, -1, -1}, { 0, 0, 1}}, { { 0, 0, 1}, { 1, 0, 0}}, { { 0, 0, 1}, { -1, 0, 0}}, { { 0, 0, -1}, { -1, 0, 0}}, { { 0, 0, -1}, { 1, 0, 0}}};
-    private int d;
-    private double e;
-    private double f;
-    private double g;
-    private double h;
-    private double i;
+    private static final DataWatcherObject<Integer> a = DataWatcher.a(EntityMinecartAbstract.class, DataWatcherRegistry.b);
+    private static final DataWatcherObject<Integer> b = DataWatcher.a(EntityMinecartAbstract.class, DataWatcherRegistry.b);
+    private static final DataWatcherObject<Float> c = DataWatcher.a(EntityMinecartAbstract.class, DataWatcherRegistry.c);
+    private static final DataWatcherObject<Integer> d = DataWatcher.a(EntityMinecartAbstract.class, DataWatcherRegistry.b);
+    private static final DataWatcherObject<Integer> e = DataWatcher.a(EntityMinecartAbstract.class, DataWatcherRegistry.b);
+    private static final DataWatcherObject<Boolean> f = DataWatcher.a(EntityMinecartAbstract.class, DataWatcherRegistry.h);
+    private boolean g;
+    private static final int[][][] h = new int[][][] { { { 0, 0, -1}, { 0, 0, 1}}, { { -1, 0, 0}, { 1, 0, 0}}, { { -1, -1, 0}, { 1, 0, 0}}, { { -1, 0, 0}, { 1, -1, 0}}, { { 0, 0, -1}, { 0, -1, 1}}, { { 0, -1, -1}, { 0, 0, 1}}, { { 0, 0, 1}, { 1, 0, 0}}, { { 0, 0, 1}, { -1, 0, 0}}, { { 0, 0, -1}, { -1, 0, 0}}, { { 0, 0, -1}, { 1, 0, 0}}};
+    private int as;
+    private double at;
+    private double au;
+    private double av;
+    private double aw;
+    private double ax;
 
     // CraftBukkit start
     public boolean slowWhenEmpty = true;
@@ -36,13 +43,12 @@ public abstract class EntityMinecartAbstract extends Entity {
 
     public EntityMinecartAbstract(World world) {
         super(world);
-        this.k = true;
-        this.a(0.98F, 0.7F);
-        this.height = this.length / 2.0F;
+        this.i = true;
+        this.setSize(0.98F, 0.7F);
     }
 
-    public static EntityMinecartAbstract a(World world, double d0, double d1, double d2, int i) {
-        switch (i) {
+    public static EntityMinecartAbstract a(World world, double d0, double d1, double d2, EntityMinecartAbstract.EnumMinecartType entityminecartabstract_enumminecarttype) {
+        switch (EntityMinecartAbstract.SyntheticClass_1.a[entityminecartabstract_enumminecarttype.ordinal()]) {
         case 1:
             return new EntityMinecartChest(world, d0, d1, d2);
 
@@ -66,28 +72,28 @@ public abstract class EntityMinecartAbstract extends Entity {
         }
     }
 
-    protected boolean g_() {
+    protected boolean playStepSound() {
         return false;
     }
 
-    protected void c() {
-        this.datawatcher.a(17, new Integer(0));
-        this.datawatcher.a(18, new Integer(1));
-        this.datawatcher.a(19, new Float(0.0F));
-        this.datawatcher.a(20, new Integer(0));
-        this.datawatcher.a(21, new Integer(6));
-        this.datawatcher.a(22, Byte.valueOf((byte) 0));
+    protected void i() {
+        this.datawatcher.register(EntityMinecartAbstract.a, Integer.valueOf(0));
+        this.datawatcher.register(EntityMinecartAbstract.b, Integer.valueOf(1));
+        this.datawatcher.register(EntityMinecartAbstract.c, Float.valueOf(0.0F));
+        this.datawatcher.register(EntityMinecartAbstract.d, Integer.valueOf(0));
+        this.datawatcher.register(EntityMinecartAbstract.e, Integer.valueOf(6));
+        this.datawatcher.register(EntityMinecartAbstract.f, Boolean.valueOf(false));
     }
 
-    public AxisAlignedBB h(Entity entity) {
-        return entity.S() ? entity.boundingBox : null;
+    public AxisAlignedBB j(Entity entity) {
+        return entity.isCollidable() ? entity.getBoundingBox() : null;
     }
 
-    public AxisAlignedBB J() {
+    public AxisAlignedBB af() {
         return null;
     }
 
-    public boolean S() {
+    public boolean isCollidable() {
         return true;
     }
 
@@ -104,13 +110,13 @@ public abstract class EntityMinecartAbstract extends Entity {
         this.world.getServer().getPluginManager().callEvent(new org.bukkit.event.vehicle.VehicleCreateEvent((Vehicle) this.getBukkitEntity())); // CraftBukkit
     }
 
-    public double ae() {
-        return (double) this.length * 0.0D - 0.30000001192092896D;
+    public double ay() {
+        return 0.0D;
     }
 
     public boolean damageEntity(DamageSource damagesource, float f) {
-        if (!this.world.isStatic && !this.dead) {
-            if (this.isInvulnerable()) {
+        if (!this.world.isClientSide && !this.dead) {
+            if (this.isInvulnerable(damagesource)) {
                 return false;
             } else {
                 // CraftBukkit start - fire VehicleDamageEvent
@@ -126,18 +132,13 @@ public abstract class EntityMinecartAbstract extends Entity {
 
                 f = (float) event.getDamage();
                 // CraftBukkit end
-
-                this.j(-this.l());
-                this.c(10);
-                this.Q();
+                this.e(-this.u());
+                this.d(10);
+                this.ao();
                 this.setDamage(this.getDamage() + f * 10.0F);
                 boolean flag = damagesource.getEntity() instanceof EntityHuman && ((EntityHuman) damagesource.getEntity()).abilities.canInstantlyBuild;
 
                 if (flag || this.getDamage() > 40.0F) {
-                    if (this.passenger != null) {
-                        this.passenger.mount(this);
-                    }
-
                     // CraftBukkit start
                     VehicleDestroyEvent destroyEvent = new VehicleDestroyEvent(vehicle, passenger);
                     this.world.getServer().getPluginManager().callEvent(destroyEvent);
@@ -147,8 +148,8 @@ public abstract class EntityMinecartAbstract extends Entity {
                         return true;
                     }
                     // CraftBukkit end
-
-                    if (flag && !this.k_()) {
+                    this.az();
+                    if (flag && !this.hasCustomName()) {
                         this.die();
                     } else {
                         this.a(damagesource);
@@ -164,16 +165,19 @@ public abstract class EntityMinecartAbstract extends Entity {
 
     public void a(DamageSource damagesource) {
         this.die();
-        ItemStack itemstack = new ItemStack(Items.MINECART, 1);
+        if (this.world.getGameRules().getBoolean("doEntityDrops")) {
+            ItemStack itemstack = new ItemStack(Items.MINECART, 1);
 
-        if (this.b != null) {
-            itemstack.c(this.b);
+            if (this.getName() != null) {
+                itemstack.c(this.getName());
+            }
+
+            this.a(itemstack, 0.0F);
         }
 
-        this.a(itemstack, 0.0F);
     }
 
-    public boolean R() {
+    public boolean isInteractable() {
         return !this.dead;
     }
 
@@ -181,7 +185,11 @@ public abstract class EntityMinecartAbstract extends Entity {
         super.die();
     }
 
-    public void h() {
+    public EnumDirection bj() {
+        return this.g ? this.getDirection().opposite().e() : this.getDirection().e();
+    }
+
+    public void m() {
         // CraftBukkit start
         double prevX = this.locX;
         double prevY = this.locY;
@@ -191,7 +199,7 @@ public abstract class EntityMinecartAbstract extends Entity {
         // CraftBukkit end
 
         if (this.getType() > 0) {
-            this.c(this.getType() - 1);
+            this.d(this.getType() - 1);
         }
 
         if (this.getDamage() > 0.0F) {
@@ -199,41 +207,41 @@ public abstract class EntityMinecartAbstract extends Entity {
         }
 
         if (this.locY < -64.0D) {
-            this.G();
+            this.Y();
         }
 
         int i;
 
-        if (!this.world.isStatic && this.world instanceof WorldServer) {
+        if (!this.world.isClientSide && this.world instanceof WorldServer) {
             this.world.methodProfiler.a("portal");
-            MinecraftServer minecraftserver = ((WorldServer) this.world).getMinecraftServer();
+            MinecraftServer minecraftserver = this.world.getMinecraftServer();
 
-            i = this.D();
-            if (this.an) {
+            i = this.V();
+            if (this.ak) {
                 if (true || minecraftserver.getAllowNether()) { // CraftBukkit - multi-world should still allow teleport even if default vanilla nether disabled
-                    if (this.vehicle == null && this.ao++ >= i) {
-                        this.ao = i;
-                        this.portalCooldown = this.ai();
+                    if (!this.isPassenger() && this.al++ >= i) {
+                        this.al = i;
+                        this.portalCooldown = this.aC();
                         byte b0;
 
-                        if (this.world.worldProvider.dimension == -1) {
+                        if (this.world.worldProvider.getDimensionManager().getDimensionID() == -1) {
                             b0 = 0;
                         } else {
                             b0 = -1;
                         }
 
-                        this.b(b0);
+                        this.c(b0);
                     }
 
-                    this.an = false;
+                    this.ak = false;
                 }
             } else {
-                if (this.ao > 0) {
-                    this.ao -= 4;
+                if (this.al > 0) {
+                    this.al -= 4;
                 }
 
-                if (this.ao < 0) {
-                    this.ao = 0;
+                if (this.al < 0) {
+                    this.al = 0;
                 }
             }
 
@@ -244,22 +252,23 @@ public abstract class EntityMinecartAbstract extends Entity {
             this.world.methodProfiler.b();
         }
 
-        if (this.world.isStatic) {
-            if (this.d > 0) {
-                double d0 = this.locX + (this.e - this.locX) / (double) this.d;
-                double d1 = this.locY + (this.f - this.locY) / (double) this.d;
-                double d2 = this.locZ + (this.g - this.locZ) / (double) this.d;
-                double d3 = MathHelper.g(this.h - (double) this.yaw);
+        if (this.world.isClientSide) {
+            if (this.as > 0) {
+                double d0 = this.locX + (this.at - this.locX) / (double) this.as;
+                double d1 = this.locY + (this.au - this.locY) / (double) this.as;
+                double d2 = this.locZ + (this.av - this.locZ) / (double) this.as;
+                double d3 = MathHelper.g(this.aw - (double) this.yaw);
 
-                this.yaw = (float) ((double) this.yaw + d3 / (double) this.d);
-                this.pitch = (float) ((double) this.pitch + (this.i - (double) this.pitch) / (double) this.d);
-                --this.d;
+                this.yaw = (float) ((double) this.yaw + d3 / (double) this.as);
+                this.pitch = (float) ((double) this.pitch + (this.ax - (double) this.pitch) / (double) this.as);
+                --this.as;
                 this.setPosition(d0, d1, d2);
-                this.b(this.yaw, this.pitch);
+                this.setYawPitch(this.yaw, this.pitch);
             } else {
                 this.setPosition(this.locX, this.locY, this.locZ);
-                this.b(this.yaw, this.pitch);
+                this.setYawPitch(this.yaw, this.pitch);
             }
+
         } else {
             this.lastX = this.locX;
             this.lastY = this.locY;
@@ -270,45 +279,42 @@ public abstract class EntityMinecartAbstract extends Entity {
             i = MathHelper.floor(this.locY);
             int k = MathHelper.floor(this.locZ);
 
-            if (BlockMinecartTrackAbstract.b_(this.world, j, i - 1, k)) {
+            if (BlockMinecartTrackAbstract.b(this.world, new BlockPosition(j, i - 1, k))) {
                 --i;
             }
 
-            double d4 = this.maxSpeed; // CraftBukkit
-            double d5 = 0.0078125D;
-            Block block = this.world.getType(j, i, k);
+            BlockPosition blockposition = new BlockPosition(j, i, k);
+            IBlockData iblockdata = this.world.getType(blockposition);
 
-            if (BlockMinecartTrackAbstract.a(block)) {
-                int l = this.world.getData(j, i, k);
-
-                this.a(j, i, k, d4, d5, block, l);
-                if (block == Blocks.ACTIVATOR_RAIL) {
-                    this.a(j, i, k, (l & 8) != 0);
+            if (BlockMinecartTrackAbstract.i(iblockdata)) {
+                this.a(blockposition, iblockdata);
+                if (iblockdata.getBlock() == Blocks.ACTIVATOR_RAIL) {
+                    this.a(j, i, k, ((Boolean) iblockdata.get(BlockPoweredRail.POWERED)).booleanValue());
                 }
             } else {
-                this.b(d4);
+                this.q();
             }
 
-            this.I();
+            this.checkBlockCollisions();
             this.pitch = 0.0F;
-            double d6 = this.lastX - this.locX;
-            double d7 = this.lastZ - this.locZ;
+            double d4 = this.lastX - this.locX;
+            double d5 = this.lastZ - this.locZ;
 
-            if (d6 * d6 + d7 * d7 > 0.001D) {
-                this.yaw = (float) (Math.atan2(d7, d6) * 180.0D / 3.141592653589793D);
-                if (this.a) {
+            if (d4 * d4 + d5 * d5 > 0.001D) {
+                this.yaw = (float) (MathHelper.b(d5, d4) * 180.0D / 3.141592653589793D);
+                if (this.g) {
                     this.yaw += 180.0F;
                 }
             }
 
-            double d8 = (double) MathHelper.g(this.yaw - this.lastYaw);
+            double d6 = (double) MathHelper.g(this.yaw - this.lastYaw);
 
-            if (d8 < -170.0D || d8 >= 170.0D) {
+            if (d6 < -170.0D || d6 >= 170.0D) {
                 this.yaw += 180.0F;
-                this.a = !this.a;
+                this.g = !this.g;
             }
 
-            this.b(this.yaw, this.pitch);
+            this.setYawPitch(this.yaw, this.pitch);
 
             // CraftBukkit start
             org.bukkit.World bworld = this.world.getWorld();
@@ -323,47 +329,31 @@ public abstract class EntityMinecartAbstract extends Entity {
             }
             // CraftBukkit end
 
-            List list = this.world.getEntities(this, this.boundingBox.grow(0.20000000298023224D, 0.0D, 0.20000000298023224D));
+            Iterator iterator = this.world.getEntities(this, this.getBoundingBox().grow(0.20000000298023224D, 0.0D, 0.20000000298023224D)).iterator();
 
-            if (list != null && !list.isEmpty()) {
-                for (int i1 = 0; i1 < list.size(); ++i1) {
-                    Entity entity = (Entity) list.get(i1);
+            while (iterator.hasNext()) {
+                Entity entity = (Entity) iterator.next();
 
-                    if (entity != this.passenger && entity.S() && entity instanceof EntityMinecartAbstract) {
-                        entity.collide(this);
-                    }
+                if (!this.w(entity) && entity.isCollidable() && entity instanceof EntityMinecartAbstract) {
+                    entity.collide(this);
                 }
             }
 
-            if (this.passenger != null && this.passenger.dead) {
-                if (this.passenger.vehicle == this) {
-                    this.passenger.vehicle = null;
-                }
-
-                this.passenger = null;
-            }
+            this.aj();
         }
+    }
+
+    protected double o() {
+        return this.maxSpeed; // CraftBukkit
     }
 
     public void a(int i, int j, int k, boolean flag) {}
 
-    protected void b(double d0) {
-        if (this.motX < -d0) {
-            this.motX = -d0;
-        }
+    protected void q() {
+        double d0 = this.o();
 
-        if (this.motX > d0) {
-            this.motX = d0;
-        }
-
-        if (this.motZ < -d0) {
-            this.motZ = -d0;
-        }
-
-        if (this.motZ > d0) {
-            this.motZ = d0;
-        }
-
+        this.motX = MathHelper.a(this.motX, -d0, d0);
+        this.motZ = MathHelper.a(this.motZ, -d0, d0);
         if (this.onGround) {
             // CraftBukkit start - replace magic numbers with our variables
             this.motX *= this.derailedX;
@@ -380,86 +370,89 @@ public abstract class EntityMinecartAbstract extends Entity {
             this.motZ *= this.flyingZ;
             // CraftBukkit end
         }
+
     }
 
-    protected void a(int i, int j, int k, double d0, double d1, Block block, int l) {
+    protected void a(BlockPosition blockposition, IBlockData iblockdata) {
         this.fallDistance = 0.0F;
-        Vec3D vec3d = this.a(this.locX, this.locY, this.locZ);
+        Vec3D vec3d = this.k(this.locX, this.locY, this.locZ);
 
-        this.locY = (double) j;
+        this.locY = (double) blockposition.getY();
         boolean flag = false;
         boolean flag1 = false;
+        BlockMinecartTrackAbstract blockminecarttrackabstract = (BlockMinecartTrackAbstract) iblockdata.getBlock();
 
-        if (block == Blocks.GOLDEN_RAIL) {
-            flag = (l & 8) != 0;
+        if (blockminecarttrackabstract == Blocks.GOLDEN_RAIL) {
+            flag = ((Boolean) iblockdata.get(BlockPoweredRail.POWERED)).booleanValue();
             flag1 = !flag;
         }
 
-        if (((BlockMinecartTrackAbstract) block).e()) {
-            l &= 7;
+        double d0 = 0.0078125D;
+        BlockMinecartTrackAbstract.EnumTrackPosition blockminecarttrackabstract_enumtrackposition = (BlockMinecartTrackAbstract.EnumTrackPosition) iblockdata.get(blockminecarttrackabstract.g());
+
+        switch (EntityMinecartAbstract.SyntheticClass_1.b[blockminecarttrackabstract_enumtrackposition.ordinal()]) {
+        case 1:
+            this.motX -= 0.0078125D;
+            ++this.locY;
+            break;
+
+        case 2:
+            this.motX += 0.0078125D;
+            ++this.locY;
+            break;
+
+        case 3:
+            this.motZ += 0.0078125D;
+            ++this.locY;
+            break;
+
+        case 4:
+            this.motZ -= 0.0078125D;
+            ++this.locY;
         }
 
-        if (l >= 2 && l <= 5) {
-            this.locY = (double) (j + 1);
-        }
+        int[][] aint = EntityMinecartAbstract.h[blockminecarttrackabstract_enumtrackposition.a()];
+        double d1 = (double) (aint[1][0] - aint[0][0]);
+        double d2 = (double) (aint[1][2] - aint[0][2]);
+        double d3 = Math.sqrt(d1 * d1 + d2 * d2);
+        double d4 = this.motX * d1 + this.motZ * d2;
 
-        if (l == 2) {
-            this.motX -= d1;
-        }
-
-        if (l == 3) {
-            this.motX += d1;
-        }
-
-        if (l == 4) {
-            this.motZ += d1;
-        }
-
-        if (l == 5) {
-            this.motZ -= d1;
-        }
-
-        int[][] aint = matrix[l];
-        double d2 = (double) (aint[1][0] - aint[0][0]);
-        double d3 = (double) (aint[1][2] - aint[0][2]);
-        double d4 = Math.sqrt(d2 * d2 + d3 * d3);
-        double d5 = this.motX * d2 + this.motZ * d3;
-
-        if (d5 < 0.0D) {
+        if (d4 < 0.0D) {
+            d1 = -d1;
             d2 = -d2;
-            d3 = -d3;
         }
 
-        double d6 = Math.sqrt(this.motX * this.motX + this.motZ * this.motZ);
+        double d5 = Math.sqrt(this.motX * this.motX + this.motZ * this.motZ);
 
-        if (d6 > 2.0D) {
-            d6 = 2.0D;
+        if (d5 > 2.0D) {
+            d5 = 2.0D;
         }
 
-        this.motX = d6 * d2 / d4;
-        this.motZ = d6 * d3 / d4;
+        this.motX = d5 * d1 / d3;
+        this.motZ = d5 * d2 / d3;
+        Entity entity = this.bu().isEmpty() ? null : (Entity) this.bu().get(0);
+        double d6;
         double d7;
         double d8;
         double d9;
-        double d10;
 
-        if (this.passenger != null && this.passenger instanceof EntityLiving) {
-            d7 = (double) ((EntityLiving) this.passenger).be;
-            if (d7 > 0.0D) {
-                d8 = -Math.sin((double) (this.passenger.yaw * 3.1415927F / 180.0F));
-                d9 = Math.cos((double) (this.passenger.yaw * 3.1415927F / 180.0F));
-                d10 = this.motX * this.motX + this.motZ * this.motZ;
-                if (d10 < 0.01D) {
-                    this.motX += d8 * 0.1D;
-                    this.motZ += d9 * 0.1D;
+        if (entity instanceof EntityLiving) {
+            d6 = (double) ((EntityLiving) entity).be;
+            if (d6 > 0.0D) {
+                d7 = -Math.sin((double) (entity.yaw * 0.017453292F));
+                d8 = Math.cos((double) (entity.yaw * 0.017453292F));
+                d9 = this.motX * this.motX + this.motZ * this.motZ;
+                if (d9 < 0.01D) {
+                    this.motX += d7 * 0.1D;
+                    this.motZ += d8 * 0.1D;
                     flag1 = false;
                 }
             }
         }
 
         if (flag1) {
-            d7 = Math.sqrt(this.motX * this.motX + this.motZ * this.motZ);
-            if (d7 < 0.03D) {
+            d6 = Math.sqrt(this.motX * this.motX + this.motZ * this.motZ);
+            if (d6 < 0.03D) {
                 this.motX *= 0.0D;
                 this.motY *= 0.0D;
                 this.motZ *= 0.0D;
@@ -470,84 +463,72 @@ public abstract class EntityMinecartAbstract extends Entity {
             }
         }
 
-        d7 = 0.0D;
-        d8 = (double) i + 0.5D + (double) aint[0][0] * 0.5D;
-        d9 = (double) k + 0.5D + (double) aint[0][2] * 0.5D;
-        d10 = (double) i + 0.5D + (double) aint[1][0] * 0.5D;
-        double d11 = (double) k + 0.5D + (double) aint[1][2] * 0.5D;
+        d6 = 0.0D;
+        d7 = (double) blockposition.getX() + 0.5D + (double) aint[0][0] * 0.5D;
+        d8 = (double) blockposition.getZ() + 0.5D + (double) aint[0][2] * 0.5D;
+        d9 = (double) blockposition.getX() + 0.5D + (double) aint[1][0] * 0.5D;
+        double d10 = (double) blockposition.getZ() + 0.5D + (double) aint[1][2] * 0.5D;
 
+        d1 = d9 - d7;
         d2 = d10 - d8;
-        d3 = d11 - d9;
+        double d11;
         double d12;
-        double d13;
 
-        if (d2 == 0.0D) {
-            this.locX = (double) i + 0.5D;
-            d7 = this.locZ - (double) k;
-        } else if (d3 == 0.0D) {
-            this.locZ = (double) k + 0.5D;
-            d7 = this.locX - (double) i;
+        if (d1 == 0.0D) {
+            this.locX = (double) blockposition.getX() + 0.5D;
+            d6 = this.locZ - (double) blockposition.getZ();
+        } else if (d2 == 0.0D) {
+            this.locZ = (double) blockposition.getZ() + 0.5D;
+            d6 = this.locX - (double) blockposition.getX();
         } else {
-            d12 = this.locX - d8;
-            d13 = this.locZ - d9;
-            d7 = (d12 * d2 + d13 * d3) * 2.0D;
+            d11 = this.locX - d7;
+            d12 = this.locZ - d8;
+            d6 = (d11 * d1 + d12 * d2) * 2.0D;
         }
 
-        this.locX = d8 + d2 * d7;
-        this.locZ = d9 + d3 * d7;
-        this.setPosition(this.locX, this.locY + (double) this.height, this.locZ);
-        d12 = this.motX;
-        d13 = this.motZ;
-        if (this.passenger != null) {
+        this.locX = d7 + d1 * d6;
+        this.locZ = d8 + d2 * d6;
+        this.setPosition(this.locX, this.locY, this.locZ);
+        d11 = this.motX;
+        d12 = this.motZ;
+        if (this.isVehicle()) {
+            d11 *= 0.75D;
             d12 *= 0.75D;
-            d13 *= 0.75D;
         }
 
-        if (d12 < -d0) {
-            d12 = -d0;
-        }
+        double d13 = this.o();
 
-        if (d12 > d0) {
-            d12 = d0;
-        }
-
-        if (d13 < -d0) {
-            d13 = -d0;
-        }
-
-        if (d13 > d0) {
-            d13 = d0;
-        }
-
-        this.move(d12, 0.0D, d13);
-        if (aint[0][1] != 0 && MathHelper.floor(this.locX) - i == aint[0][0] && MathHelper.floor(this.locZ) - k == aint[0][2]) {
+        d11 = MathHelper.a(d11, -d13, d13);
+        d12 = MathHelper.a(d12, -d13, d13);
+        this.move(d11, 0.0D, d12);
+        if (aint[0][1] != 0 && MathHelper.floor(this.locX) - blockposition.getX() == aint[0][0] && MathHelper.floor(this.locZ) - blockposition.getZ() == aint[0][2]) {
             this.setPosition(this.locX, this.locY + (double) aint[0][1], this.locZ);
-        } else if (aint[1][1] != 0 && MathHelper.floor(this.locX) - i == aint[1][0] && MathHelper.floor(this.locZ) - k == aint[1][2]) {
+        } else if (aint[1][1] != 0 && MathHelper.floor(this.locX) - blockposition.getX() == aint[1][0] && MathHelper.floor(this.locZ) - blockposition.getZ() == aint[1][2]) {
             this.setPosition(this.locX, this.locY + (double) aint[1][1], this.locZ);
         }
 
-        this.i();
-        Vec3D vec3d1 = this.a(this.locX, this.locY, this.locZ);
+        this.r();
+        Vec3D vec3d1 = this.k(this.locX, this.locY, this.locZ);
 
         if (vec3d1 != null && vec3d != null) {
-            double d14 = (vec3d.b - vec3d1.b) * 0.05D;
+            double d14 = (vec3d.y - vec3d1.y) * 0.05D;
 
-            d6 = Math.sqrt(this.motX * this.motX + this.motZ * this.motZ);
-            if (d6 > 0.0D) {
-                this.motX = this.motX / d6 * (d6 + d14);
-                this.motZ = this.motZ / d6 * (d6 + d14);
+            d5 = Math.sqrt(this.motX * this.motX + this.motZ * this.motZ);
+            if (d5 > 0.0D) {
+                this.motX = this.motX / d5 * (d5 + d14);
+                this.motZ = this.motZ / d5 * (d5 + d14);
             }
 
-            this.setPosition(this.locX, vec3d1.b, this.locZ);
+            this.setPosition(this.locX, vec3d1.y, this.locZ);
         }
 
-        int i1 = MathHelper.floor(this.locX);
-        int j1 = MathHelper.floor(this.locZ);
+        int i = MathHelper.floor(this.locX);
+        int j = MathHelper.floor(this.locZ);
 
-        if (i1 != i || j1 != k) {
-            d6 = Math.sqrt(this.motX * this.motX + this.motZ * this.motZ);
-            this.motX = d6 * (double) (i1 - i);
-            this.motZ = d6 * (double) (j1 - k);
+        if (i != blockposition.getX() || j != blockposition.getZ()) {
+            d5 = Math.sqrt(this.motX * this.motX + this.motZ * this.motZ);
+            this.motX = d5 * (double) (i - blockposition.getX());
+            this.motZ = d5 * (double) (j - blockposition.getZ());
         }
 
         if (flag) {
@@ -558,24 +539,25 @@ public abstract class EntityMinecartAbstract extends Entity {
 
                 this.motX += this.motX / d15 * d16;
                 this.motZ += this.motZ / d15 * d16;
-            } else if (l == 1) {
-                if (this.world.getType(i - 1, j, k).r()) {
+            } else if (blockminecarttrackabstract_enumtrackposition == BlockMinecartTrackAbstract.EnumTrackPosition.EAST_WEST) {
+                if (this.world.getType(blockposition.west()).l()) {
                     this.motX = 0.02D;
-                } else if (this.world.getType(i + 1, j, k).r()) {
+                } else if (this.world.getType(blockposition.east()).l()) {
                     this.motX = -0.02D;
                 }
-            } else if (l == 0) {
-                if (this.world.getType(i, j, k - 1).r()) {
+            } else if (blockminecarttrackabstract_enumtrackposition == BlockMinecartTrackAbstract.EnumTrackPosition.NORTH_SOUTH) {
+                if (this.world.getType(blockposition.north()).l()) {
                     this.motZ = 0.02D;
-                } else if (this.world.getType(i, j, k + 1).r()) {
+                } else if (this.world.getType(blockposition.south()).l()) {
                     this.motZ = -0.02D;
                 }
             }
         }
+
     }
 
-    protected void i() {
-        if (this.passenger != null || !this.slowWhenEmpty) { // CraftBukkit - add !this.slowWhenEmpty
+    protected void r() {
+        if (this.isVehicle() || !this.slowWhenEmpty) { // CraftBukkit - add !this.slowWhenEmpty
             this.motX *= 0.996999979019165D;
             this.motY *= 0.0D;
             this.motZ *= 0.996999979019165D;
@@ -584,38 +566,39 @@ public abstract class EntityMinecartAbstract extends Entity {
             this.motY *= 0.0D;
             this.motZ *= 0.9599999785423279D;
         }
+
     }
 
-    public Vec3D a(double d0, double d1, double d2) {
+    public void setPosition(double d0, double d1, double d2) {
+        this.locX = d0;
+        this.locY = d1;
+        this.locZ = d2;
+        float f = this.width / 2.0F;
+        float f1 = this.length;
+
+        this.a(new AxisAlignedBB(d0 - (double) f, d1, d2 - (double) f, d0 + (double) f, d1 + (double) f1, d2 + (double) f));
+    }
+
+    public Vec3D k(double d0, double d1, double d2) {
         int i = MathHelper.floor(d0);
         int j = MathHelper.floor(d1);
         int k = MathHelper.floor(d2);
 
-        if (BlockMinecartTrackAbstract.b_(this.world, i, j - 1, k)) {
+        if (BlockMinecartTrackAbstract.b(this.world, new BlockPosition(i, j - 1, k))) {
             --j;
         }
 
-        Block block = this.world.getType(i, j, k);
+        IBlockData iblockdata = this.world.getType(new BlockPosition(i, j, k));
 
-        if (BlockMinecartTrackAbstract.a(block)) {
-            int l = this.world.getData(i, j, k);
-
-            d1 = (double) j;
-            if (((BlockMinecartTrackAbstract) block).e()) {
-                l &= 7;
-            }
-
-            if (l >= 2 && l <= 5) {
-                d1 = (double) (j + 1);
-            }
-
-            int[][] aint = matrix[l];
+        if (BlockMinecartTrackAbstract.i(iblockdata)) {
+            BlockMinecartTrackAbstract.EnumTrackPosition blockminecarttrackabstract_enumtrackposition = (BlockMinecartTrackAbstract.EnumTrackPosition) iblockdata.get(((BlockMinecartTrackAbstract) iblockdata.getBlock()).g());
+            int[][] aint = EntityMinecartAbstract.h[blockminecarttrackabstract_enumtrackposition.a()];
             double d3 = 0.0D;
             double d4 = (double) i + 0.5D + (double) aint[0][0] * 0.5D;
-            double d5 = (double) j + 0.5D + (double) aint[0][1] * 0.5D;
+            double d5 = (double) j + 0.0625D + (double) aint[0][1] * 0.5D;
             double d6 = (double) k + 0.5D + (double) aint[0][2] * 0.5D;
             double d7 = (double) i + 0.5D + (double) aint[1][0] * 0.5D;
-            double d8 = (double) j + 0.5D + (double) aint[1][1] * 0.5D;
+            double d8 = (double) j + 0.0625D + (double) aint[1][1] * 0.5D;
             double d9 = (double) k + 0.5D + (double) aint[1][2] * 0.5D;
             double d10 = d7 - d4;
             double d11 = (d8 - d5) * 2.0D;
@@ -645,7 +628,7 @@ public abstract class EntityMinecartAbstract extends Entity {
                 d1 += 0.5D;
             }
 
-            return Vec3D.a(d0, d1, d2);
+            return new Vec3D(d0, d1, d2);
         } else {
             return null;
         }
@@ -653,209 +636,287 @@ public abstract class EntityMinecartAbstract extends Entity {
 
     protected void a(NBTTagCompound nbttagcompound) {
         if (nbttagcompound.getBoolean("CustomDisplayTile")) {
-            this.k(nbttagcompound.getInt("DisplayTile"));
-            this.l(nbttagcompound.getInt("DisplayData"));
-            this.m(nbttagcompound.getInt("DisplayOffset"));
+            Block block;
+
+            if (nbttagcompound.hasKeyOfType("DisplayTile", 8)) {
+                block = Block.getByName(nbttagcompound.getString("DisplayTile"));
+            } else {
+                block = Block.getById(nbttagcompound.getInt("DisplayTile"));
+            }
+
+            int i = nbttagcompound.getInt("DisplayData");
+
+            this.setDisplayBlock(block == null ? Blocks.AIR.getBlockData() : block.fromLegacyData(i));
+            this.setDisplayBlockOffset(nbttagcompound.getInt("DisplayOffset"));
         }
 
-        if (nbttagcompound.hasKeyOfType("CustomName", 8) && nbttagcompound.getString("CustomName").length() > 0) {
-            this.b = nbttagcompound.getString("CustomName");
-        }
     }
 
     protected void b(NBTTagCompound nbttagcompound) {
-        if (this.t()) {
+        if (this.B()) {
             nbttagcompound.setBoolean("CustomDisplayTile", true);
-            nbttagcompound.setInt("DisplayTile", this.n().getMaterial() == Material.AIR ? 0 : Block.getId(this.n()));
-            nbttagcompound.setInt("DisplayData", this.p());
-            nbttagcompound.setInt("DisplayOffset", this.r());
+            IBlockData iblockdata = this.getDisplayBlock();
+            MinecraftKey minecraftkey = (MinecraftKey) Block.REGISTRY.b(iblockdata.getBlock());
+
+            nbttagcompound.setString("DisplayTile", minecraftkey == null ? "" : minecraftkey.toString());
+            nbttagcompound.setInt("DisplayData", iblockdata.getBlock().toLegacyData(iblockdata));
+            nbttagcompound.setInt("DisplayOffset", this.getDisplayBlockOffset());
         }
 
-        if (this.b != null && this.b.length() > 0) {
-            nbttagcompound.setString("CustomName", this.b);
-        }
     }
 
     public void collide(Entity entity) {
-        if (!this.world.isStatic) {
-            if (entity != this.passenger) {
-                // CraftBukkit start
-                Vehicle vehicle = (Vehicle) this.getBukkitEntity();
-                org.bukkit.entity.Entity hitEntity = (entity == null) ? null : entity.getBukkitEntity();
+        if (!this.world.isClientSide) {
+            if (!entity.noclip && !this.noclip) {
+                if (!this.w(entity)) {
+                    // CraftBukkit start
+                    Vehicle vehicle = (Vehicle) this.getBukkitEntity();
+                    org.bukkit.entity.Entity hitEntity = (entity == null) ? null : entity.getBukkitEntity();
 
-                VehicleEntityCollisionEvent collisionEvent = new VehicleEntityCollisionEvent(vehicle, hitEntity);
-                this.world.getServer().getPluginManager().callEvent(collisionEvent);
+                    VehicleEntityCollisionEvent collisionEvent = new VehicleEntityCollisionEvent(vehicle, hitEntity);
+                    this.world.getServer().getPluginManager().callEvent(collisionEvent);
 
-                if (collisionEvent.isCancelled()) {
-                    return;
-                }
-                // CraftBukkit end
-
-                if (entity instanceof EntityLiving && !(entity instanceof EntityHuman) && !(entity instanceof EntityIronGolem) && this.m() == 0 && this.motX * this.motX + this.motZ * this.motZ > 0.01D && this.passenger == null && entity.vehicle == null) {
-                    entity.mount(this);
-                }
-
-                double d0 = entity.locX - this.locX;
-                double d1 = entity.locZ - this.locZ;
-                double d2 = d0 * d0 + d1 * d1;
-
-                // CraftBukkit - collision
-                if (d2 >= 9.999999747378752E-5D && !collisionEvent.isCollisionCancelled()) {
-                    d2 = (double) MathHelper.sqrt(d2);
-                    d0 /= d2;
-                    d1 /= d2;
-                    double d3 = 1.0D / d2;
-
-                    if (d3 > 1.0D) {
-                        d3 = 1.0D;
+                    if (collisionEvent.isCancelled()) {
+                        return;
+                    }
+                    // CraftBukkit end
+                    if (entity instanceof EntityLiving && this.v() == EntityMinecartAbstract.EnumMinecartType.RIDEABLE && this.motX * this.motX + this.motZ * this.motZ > 0.01D && !(entity instanceof EntityHuman) && !(entity instanceof EntityIronGolem) && !this.isVehicle() && !entity.isPassenger()) {
+                        entity.startRiding(this);
                     }
 
-                    d0 *= d3;
-                    d1 *= d3;
-                    d0 *= 0.10000000149011612D;
-                    d1 *= 0.10000000149011612D;
-                    d0 *= (double) (1.0F - this.Y);
-                    d1 *= (double) (1.0F - this.Y);
-                    d0 *= 0.5D;
-                    d1 *= 0.5D;
-                    if (entity instanceof EntityMinecartAbstract) {
-                        double d4 = entity.locX - this.locX;
-                        double d5 = entity.locZ - this.locZ;
-                        Vec3D vec3d = Vec3D.a(d4, 0.0D, d5).a();
-                        Vec3D vec3d1 = Vec3D.a((double) MathHelper.cos(this.yaw * 3.1415927F / 180.0F), 0.0D, (double) MathHelper.sin(this.yaw * 3.1415927F / 180.0F)).a();
-                        double d6 = Math.abs(vec3d.b(vec3d1));
+                    double d0 = entity.locX - this.locX;
+                    double d1 = entity.locZ - this.locZ;
+                    double d2 = d0 * d0 + d1 * d1;
 
-                        if (d6 < 0.800000011920929D) {
-                            return;
+                    // CraftBukkit - collision
+                    if (d2 >= 9.999999747378752E-5D && !collisionEvent.isCollisionCancelled()) {
+                        d2 = (double) MathHelper.sqrt(d2);
+                        d0 /= d2;
+                        d1 /= d2;
+                        double d3 = 1.0D / d2;
+
+                        if (d3 > 1.0D) {
+                            d3 = 1.0D;
                         }
 
-                        double d7 = entity.motX + this.motX;
-                        double d8 = entity.motZ + this.motZ;
+                        d0 *= d3;
+                        d1 *= d3;
+                        d0 *= 0.10000000149011612D;
+                        d1 *= 0.10000000149011612D;
+                        d0 *= (double) (1.0F - this.R);
+                        d1 *= (double) (1.0F - this.R);
+                        d0 *= 0.5D;
+                        d1 *= 0.5D;
+                        if (entity instanceof EntityMinecartAbstract) {
+                            double d4 = entity.locX - this.locX;
+                            double d5 = entity.locZ - this.locZ;
+                            Vec3D vec3d = (new Vec3D(d4, 0.0D, d5)).a();
+                            Vec3D vec3d1 = (new Vec3D((double) MathHelper.cos(this.yaw * 0.017453292F), 0.0D, (double) MathHelper.sin(this.yaw * 0.017453292F))).a();
+                            double d6 = Math.abs(vec3d.b(vec3d1));
 
-                        if (((EntityMinecartAbstract) entity).m() == 2 && this.m() != 2) {
-                            this.motX *= 0.20000000298023224D;
-                            this.motZ *= 0.20000000298023224D;
-                            this.g(entity.motX - d0, 0.0D, entity.motZ - d1);
-                            entity.motX *= 0.949999988079071D;
-                            entity.motZ *= 0.949999988079071D;
-                        } else if (((EntityMinecartAbstract) entity).m() != 2 && this.m() == 2) {
-                            entity.motX *= 0.20000000298023224D;
-                            entity.motZ *= 0.20000000298023224D;
-                            entity.g(this.motX + d0, 0.0D, this.motZ + d1);
-                            this.motX *= 0.949999988079071D;
-                            this.motZ *= 0.949999988079071D;
+                            if (d6 < 0.800000011920929D) {
+                                return;
+                            }
+
+                            double d7 = entity.motX + this.motX;
+                            double d8 = entity.motZ + this.motZ;
+
+                            if (((EntityMinecartAbstract) entity).v() == EntityMinecartAbstract.EnumMinecartType.FURNACE && this.v() != EntityMinecartAbstract.EnumMinecartType.FURNACE) {
+                                this.motX *= 0.20000000298023224D;
+                                this.motZ *= 0.20000000298023224D;
+                                this.g(entity.motX - d0, 0.0D, entity.motZ - d1);
+                                entity.motX *= 0.949999988079071D;
+                                entity.motZ *= 0.949999988079071D;
+                            } else if (((EntityMinecartAbstract) entity).v() != EntityMinecartAbstract.EnumMinecartType.FURNACE && this.v() == EntityMinecartAbstract.EnumMinecartType.FURNACE) {
+                                entity.motX *= 0.20000000298023224D;
+                                entity.motZ *= 0.20000000298023224D;
+                                entity.g(this.motX + d0, 0.0D, this.motZ + d1);
+                                this.motX *= 0.949999988079071D;
+                                this.motZ *= 0.949999988079071D;
+                            } else {
+                                d7 /= 2.0D;
+                                d8 /= 2.0D;
+                                this.motX *= 0.20000000298023224D;
+                                this.motZ *= 0.20000000298023224D;
+                                this.g(d7 - d0, 0.0D, d8 - d1);
+                                entity.motX *= 0.20000000298023224D;
+                                entity.motZ *= 0.20000000298023224D;
+                                entity.g(d7 + d0, 0.0D, d8 + d1);
+                            }
                         } else {
-                            d7 /= 2.0D;
-                            d8 /= 2.0D;
-                            this.motX *= 0.20000000298023224D;
-                            this.motZ *= 0.20000000298023224D;
-                            this.g(d7 - d0, 0.0D, d8 - d1);
-                            entity.motX *= 0.20000000298023224D;
-                            entity.motZ *= 0.20000000298023224D;
-                            entity.g(d7 + d0, 0.0D, d8 + d1);
+                            this.g(-d0, 0.0D, -d1);
+                            entity.g(d0 / 4.0D, 0.0D, d1 / 4.0D);
                         }
-                    } else {
-                        this.g(-d0, 0.0D, -d1);
-                        entity.g(d0 / 4.0D, 0.0D, d1 / 4.0D);
                     }
+
                 }
             }
         }
     }
 
     public void setDamage(float f) {
-        this.datawatcher.watch(19, Float.valueOf(f));
+        this.datawatcher.set(EntityMinecartAbstract.c, Float.valueOf(f));
     }
 
     public float getDamage() {
-        return this.datawatcher.getFloat(19);
+        return ((Float) this.datawatcher.get(EntityMinecartAbstract.c)).floatValue();
     }
 
-    public void c(int i) {
-        this.datawatcher.watch(17, Integer.valueOf(i));
+    public void d(int i) {
+        this.datawatcher.set(EntityMinecartAbstract.a, Integer.valueOf(i));
     }
 
     public int getType() {
-        return this.datawatcher.getInt(17);
+        return ((Integer) this.datawatcher.get(EntityMinecartAbstract.a)).intValue();
     }
 
-    public void j(int i) {
-        this.datawatcher.watch(18, Integer.valueOf(i));
+    public void e(int i) {
+        this.datawatcher.set(EntityMinecartAbstract.b, Integer.valueOf(i));
     }
 
-    public int l() {
-        return this.datawatcher.getInt(18);
+    public int u() {
+        return ((Integer) this.datawatcher.get(EntityMinecartAbstract.b)).intValue();
     }
 
-    public abstract int m();
+    public abstract EntityMinecartAbstract.EnumMinecartType v();
 
-    public Block n() {
-        if (!this.t()) {
-            return this.o();
-        } else {
-            int i = this.getDataWatcher().getInt(20) & '\uffff';
-
-            return Block.getById(i);
-        }
+    public IBlockData getDisplayBlock() {
+        return !this.B() ? this.x() : Block.getByCombinedId(((Integer) this.getDataWatcher().get(EntityMinecartAbstract.d)).intValue());
     }
 
-    public Block o() {
-        return Blocks.AIR;
+    public IBlockData x() {
+        return Blocks.AIR.getBlockData();
     }
 
-    public int p() {
-        return !this.t() ? this.q() : this.getDataWatcher().getInt(20) >> 16;
+    public int getDisplayBlockOffset() {
+        return !this.B() ? this.A() : ((Integer) this.getDataWatcher().get(EntityMinecartAbstract.e)).intValue();
     }
 
-    public int q() {
-        return 0;
-    }
-
-    public int r() {
-        return !this.t() ? this.s() : this.getDataWatcher().getInt(21);
-    }
-
-    public int s() {
+    public int A() {
         return 6;
     }
 
-    public void k(int i) {
-        this.getDataWatcher().watch(20, Integer.valueOf(i & '\uffff' | this.p() << 16));
+    public void setDisplayBlock(IBlockData iblockdata) {
+        this.getDataWatcher().set(EntityMinecartAbstract.d, Integer.valueOf(Block.getCombinedId(iblockdata)));
         this.a(true);
     }
 
-    public void l(int i) {
-        this.getDataWatcher().watch(20, Integer.valueOf(Block.getId(this.n()) & '\uffff' | i << 16));
+    public void setDisplayBlockOffset(int i) {
+        this.getDataWatcher().set(EntityMinecartAbstract.e, Integer.valueOf(i));
         this.a(true);
     }
 
-    public void m(int i) {
-        this.getDataWatcher().watch(21, Integer.valueOf(i));
-        this.a(true);
-    }
-
-    public boolean t() {
-        return this.getDataWatcher().getByte(22) == 1;
+    public boolean B() {
+        return ((Boolean) this.getDataWatcher().get(EntityMinecartAbstract.f)).booleanValue();
     }
 
     public void a(boolean flag) {
-        this.getDataWatcher().watch(22, Byte.valueOf((byte) (flag ? 1 : 0)));
+        this.getDataWatcher().set(EntityMinecartAbstract.f, Boolean.valueOf(flag));
     }
 
-    public void a(String s) {
-        this.b = s;
+    static class SyntheticClass_1 {
+
+        static final int[] a;
+        static final int[] b = new int[BlockMinecartTrackAbstract.EnumTrackPosition.values().length];
+
+        static {
+            try {
+                EntityMinecartAbstract.SyntheticClass_1.b[BlockMinecartTrackAbstract.EnumTrackPosition.ASCENDING_EAST.ordinal()] = 1;
+            } catch (NoSuchFieldError nosuchfielderror) {
+                ;
+            }
+
+            try {
+                EntityMinecartAbstract.SyntheticClass_1.b[BlockMinecartTrackAbstract.EnumTrackPosition.ASCENDING_WEST.ordinal()] = 2;
+            } catch (NoSuchFieldError nosuchfielderror1) {
+                ;
+            }
+
+            try {
+                EntityMinecartAbstract.SyntheticClass_1.b[BlockMinecartTrackAbstract.EnumTrackPosition.ASCENDING_NORTH.ordinal()] = 3;
+            } catch (NoSuchFieldError nosuchfielderror2) {
+                ;
+            }
+
+            try {
+                EntityMinecartAbstract.SyntheticClass_1.b[BlockMinecartTrackAbstract.EnumTrackPosition.ASCENDING_SOUTH.ordinal()] = 4;
+            } catch (NoSuchFieldError nosuchfielderror3) {
+                ;
+            }
+
+            a = new int[EntityMinecartAbstract.EnumMinecartType.values().length];
+
+            try {
+                EntityMinecartAbstract.SyntheticClass_1.a[EntityMinecartAbstract.EnumMinecartType.CHEST.ordinal()] = 1;
+            } catch (NoSuchFieldError nosuchfielderror4) {
+                ;
+            }
+
+            try {
+                EntityMinecartAbstract.SyntheticClass_1.a[EntityMinecartAbstract.EnumMinecartType.FURNACE.ordinal()] = 2;
+            } catch (NoSuchFieldError nosuchfielderror5) {
+                ;
+            }
+
+            try {
+                EntityMinecartAbstract.SyntheticClass_1.a[EntityMinecartAbstract.EnumMinecartType.TNT.ordinal()] = 3;
+            } catch (NoSuchFieldError nosuchfielderror6) {
+                ;
+            }
+
+            try {
+                EntityMinecartAbstract.SyntheticClass_1.a[EntityMinecartAbstract.EnumMinecartType.SPAWNER.ordinal()] = 4;
+            } catch (NoSuchFieldError nosuchfielderror7) {
+                ;
+            }
+
+            try {
+                EntityMinecartAbstract.SyntheticClass_1.a[EntityMinecartAbstract.EnumMinecartType.HOPPER.ordinal()] = 5;
+            } catch (NoSuchFieldError nosuchfielderror8) {
+                ;
+            }
+
+            try {
+                EntityMinecartAbstract.SyntheticClass_1.a[EntityMinecartAbstract.EnumMinecartType.COMMAND_BLOCK.ordinal()] = 6;
+            } catch (NoSuchFieldError nosuchfielderror9) {
+                ;
+            }
+
+        }
     }
 
-    public String getName() {
-        return this.b != null ? this.b : super.getName();
-    }
+    public static enum EnumMinecartType {
 
-    public boolean k_() {
-        return this.b != null;
-    }
+        RIDEABLE(0, "MinecartRideable"), CHEST(1, "MinecartChest"), FURNACE(2, "MinecartFurnace"), TNT(3, "MinecartTNT"), SPAWNER(4, "MinecartSpawner"), HOPPER(5, "MinecartHopper"), COMMAND_BLOCK(6, "MinecartCommandBlock");
 
-    public String u() {
-        return this.b;
+        private static final Map<Integer, EntityMinecartAbstract.EnumMinecartType> h = Maps.newHashMap();
+        private final int i;
+        private final String j;
+
+        private EnumMinecartType(int i, String s) {
+            this.i = i;
+            this.j = s;
+        }
+
+        public int a() {
+            return this.i;
+        }
+
+        public String b() {
+            return this.j;
+        }
+
+        static {
+            EntityMinecartAbstract.EnumMinecartType[] aentityminecartabstract_enumminecarttype = values();
+            int i = aentityminecartabstract_enumminecarttype.length;
+
+            for (int j = 0; j < i; ++j) {
+                EntityMinecartAbstract.EnumMinecartType entityminecartabstract_enumminecarttype = aentityminecartabstract_enumminecarttype[j];
+
+                EntityMinecartAbstract.EnumMinecartType.h.put(Integer.valueOf(entityminecartabstract_enumminecarttype.a()), entityminecartabstract_enumminecarttype);
+            }
+
+        }
     }
 
     // CraftBukkit start - Methods for getting and setting flying and derailed velocity modifiers
