@@ -6,58 +6,70 @@ import org.bukkit.event.entity.EntityCombustEvent; // CraftBukkit
 
 public class EntitySkeleton extends EntityMonster implements IRangedEntity {
 
-    private PathfinderGoalArrowAttack bp = new PathfinderGoalArrowAttack(this, 1.0D, 20, 60, 15.0F);
-    private PathfinderGoalMeleeAttack bq = new PathfinderGoalMeleeAttack(this, EntityHuman.class, 1.2D, false);
+    private static final DataWatcherObject<Integer> a = DataWatcher.a(EntitySkeleton.class, DataWatcherRegistry.b);
+    private static final DataWatcherObject<Boolean> b = DataWatcher.a(EntitySkeleton.class, DataWatcherRegistry.h);
+    private final PathfinderGoalBowShoot c = new PathfinderGoalBowShoot(this, 1.0D, 20, 15.0F);
+    private final PathfinderGoalMeleeAttack bv = new PathfinderGoalMeleeAttack(this, 1.2D, false) { // CraftBukkit decompile error flag -> false
+        public void d() {
+            super.d();
+            EntitySkeleton.this.a(false);
+        }
+
+        public void c() {
+            super.c();
+            EntitySkeleton.this.a(true);
+        }
+    };
 
     public EntitySkeleton(World world) {
         super(world);
+        this.o();
+    }
+
+    protected void r() {
         this.goalSelector.a(1, new PathfinderGoalFloat(this));
         this.goalSelector.a(2, new PathfinderGoalRestrictSun(this));
         this.goalSelector.a(3, new PathfinderGoalFleeSun(this, 1.0D));
+        this.goalSelector.a(3, new PathfinderGoalAvoidTarget(this, EntityWolf.class, 6.0F, 1.0D, 1.2D));
         this.goalSelector.a(5, new PathfinderGoalRandomStroll(this, 1.0D));
         this.goalSelector.a(6, new PathfinderGoalLookAtPlayer(this, EntityHuman.class, 8.0F));
         this.goalSelector.a(6, new PathfinderGoalRandomLookaround(this));
-        this.targetSelector.a(1, new PathfinderGoalHurtByTarget(this, false));
-        this.targetSelector.a(2, new PathfinderGoalNearestAttackableTarget(this, EntityHuman.class, 0, true));
-        if (world != null && !world.isStatic) {
-            this.bZ();
-        }
+        this.targetSelector.a(1, new PathfinderGoalHurtByTarget(this, false, new Class[0]));
+        this.targetSelector.a(2, new PathfinderGoalNearestAttackableTarget(this, EntityHuman.class, true));
+        this.targetSelector.a(3, new PathfinderGoalNearestAttackableTarget(this, EntityIronGolem.class, true));
     }
 
-    protected void aD() {
-        super.aD();
-        this.getAttributeInstance(GenericAttributes.d).setValue(0.25D);
+    protected void initAttributes() {
+        super.initAttributes();
+        this.getAttributeInstance(GenericAttributes.MOVEMENT_SPEED).setValue(0.25D);
     }
 
-    protected void c() {
-        super.c();
-        this.datawatcher.a(13, new Byte((byte) 0));
+    protected void i() {
+        super.i();
+        this.datawatcher.register(EntitySkeleton.a, Integer.valueOf(0));
+        this.datawatcher.register(EntitySkeleton.b, Boolean.valueOf(false));
     }
 
-    public boolean bk() {
-        return true;
+    protected SoundEffect G() {
+        return SoundEffects.fh;
     }
 
-    protected String t() {
-        return "mob.skeleton.say";
+    protected SoundEffect bR() {
+        return SoundEffects.fm;
     }
 
-    protected String aT() {
-        return "mob.skeleton.hurt";
+    protected SoundEffect bS() {
+        return SoundEffects.fi;
     }
 
-    protected String aU() {
-        return "mob.skeleton.death";
+    protected void a(BlockPosition blockposition, Block block) {
+        this.a(SoundEffects.fo, 0.15F, 1.0F);
     }
 
-    protected void a(int i, int j, int k, Block block) {
-        this.makeSound("mob.skeleton.step", 0.15F, 1.0F);
-    }
-
-    public boolean n(Entity entity) {
-        if (super.n(entity)) {
+    public boolean B(Entity entity) {
+        if (super.B(entity)) {
             if (this.getSkeletonType() == 1 && entity instanceof EntityLiving) {
-                ((EntityLiving) entity).addEffect(new MobEffect(MobEffectList.WITHER.id, 200));
+                ((EntityLiving) entity).addEffect(new MobEffect(MobEffects.WITHER, 200));
             }
 
             return true;
@@ -70,20 +82,21 @@ public class EntitySkeleton extends EntityMonster implements IRangedEntity {
         return EnumMonsterType.UNDEAD;
     }
 
-    public void e() {
-        if (this.world.w() && !this.world.isStatic) {
-            float f = this.d(1.0F);
+    public void n() {
+        if (this.world.B() && !this.world.isClientSide) {
+            float f = this.e(1.0F);
+            BlockPosition blockposition = this.by() instanceof EntityBoat ? (new BlockPosition(this.locX, (double) Math.round(this.locY), this.locZ)).up() : new BlockPosition(this.locX, (double) Math.round(this.locY), this.locZ);
 
-            if (f > 0.5F && this.random.nextFloat() * 30.0F < (f - 0.4F) * 2.0F && this.world.i(MathHelper.floor(this.locX), MathHelper.floor(this.locY), MathHelper.floor(this.locZ))) {
+            if (f > 0.5F && this.random.nextFloat() * 30.0F < (f - 0.4F) * 2.0F && this.world.h(blockposition)) {
                 boolean flag = true;
-                ItemStack itemstack = this.getEquipment(4);
+                ItemStack itemstack = this.getEquipment(EnumItemSlot.HEAD);
 
                 if (itemstack != null) {
-                    if (itemstack.g()) {
-                        itemstack.setData(itemstack.j() + this.random.nextInt(2));
-                        if (itemstack.j() >= itemstack.l()) {
-                            this.a(itemstack);
-                            this.setEquipment(4, (ItemStack) null);
+                    if (itemstack.e()) {
+                        itemstack.setData(itemstack.h() + this.random.nextInt(2));
+                        if (itemstack.h() >= itemstack.j()) {
+                            this.b(itemstack);
+                            this.setSlot(EnumItemSlot.HEAD, (ItemStack) null);
                         }
                     }
 
@@ -103,166 +116,155 @@ public class EntitySkeleton extends EntityMonster implements IRangedEntity {
             }
         }
 
-        if (this.world.isStatic && this.getSkeletonType() == 1) {
-            this.a(0.72F, 2.34F);
+        if (this.world.isClientSide) {
+            this.b(this.getSkeletonType());
         }
 
-        super.e();
+        super.n();
     }
 
-    public void ab() {
-        super.ab();
-        if (this.vehicle instanceof EntityCreature) {
-            EntityCreature entitycreature = (EntityCreature) this.vehicle;
+    public void aw() {
+        super.aw();
+        if (this.by() instanceof EntityCreature) {
+            EntityCreature entitycreature = (EntityCreature) this.by();
 
             this.aM = entitycreature.aM;
         }
+
     }
 
     public void die(DamageSource damagesource) {
-        super.die(damagesource);
+        // super.die(damagesource); // CraftBukkit
         if (damagesource.i() instanceof EntityArrow && damagesource.getEntity() instanceof EntityHuman) {
             EntityHuman entityhuman = (EntityHuman) damagesource.getEntity();
             double d0 = entityhuman.locX - this.locX;
             double d1 = entityhuman.locZ - this.locZ;
 
             if (d0 * d0 + d1 * d1 >= 2500.0D) {
-                entityhuman.a((Statistic) AchievementList.v);
+                entityhuman.b((Statistic) AchievementList.v);
             }
+        } else if (damagesource.getEntity() instanceof EntityCreeper && ((EntityCreeper) damagesource.getEntity()).isPowered() && ((EntityCreeper) damagesource.getEntity()).canCauseHeadDrop()) {
+            ((EntityCreeper) damagesource.getEntity()).setCausedHeadDrop();
+            this.a(new ItemStack(Items.SKULL, 1, this.getSkeletonType() == 1 ? 1 : 0), 0.0F);
         }
+        super.die(damagesource); // CraftBukkit - moved from above
+
     }
 
-    protected Item getLoot() {
-        return Items.ARROW;
+    protected MinecraftKey J() {
+        return this.getSkeletonType() == 1 ? LootTables.ak : LootTables.aj;
     }
 
-    protected void dropDeathLoot(boolean flag, int i) {
-        int j;
-        int k;
-
-        if (this.getSkeletonType() == 1) {
-            j = this.random.nextInt(3 + i) - 1;
-
-            for (k = 0; k < j; ++k) {
-                this.a(Items.COAL, 1);
-            }
-        } else {
-            j = this.random.nextInt(3 + i);
-
-            for (k = 0; k < j; ++k) {
-                this.a(Items.ARROW, 1);
-            }
-        }
-
-        j = this.random.nextInt(3 + i);
-
-        for (k = 0; k < j; ++k) {
-            this.a(Items.BONE, 1);
-        }
+    protected void a(DifficultyDamageScaler difficultydamagescaler) {
+        super.a(difficultydamagescaler);
+        this.setSlot(EnumItemSlot.MAINHAND, new ItemStack(Items.BOW));
     }
 
-    protected void getRareDrop(int i) {
-        if (this.getSkeletonType() == 1) {
-            this.a(new ItemStack(Items.SKULL, 1, 1), 0.0F);
-        }
-    }
-
-    protected void bC() {
-        super.bC();
-        this.setEquipment(0, new ItemStack(Items.BOW));
-    }
-
-    public GroupDataEntity prepare(GroupDataEntity groupdataentity) {
-        groupdataentity = super.prepare(groupdataentity);
-        if (this.world.worldProvider instanceof WorldProviderHell && this.aI().nextInt(5) > 0) {
-            this.goalSelector.a(4, this.bq);
+    public GroupDataEntity prepare(DifficultyDamageScaler difficultydamagescaler, GroupDataEntity groupdataentity) {
+        groupdataentity = super.prepare(difficultydamagescaler, groupdataentity);
+        if (this.world.worldProvider instanceof WorldProviderHell && this.getRandom().nextInt(5) > 0) {
+            this.goalSelector.a(4, this.bv);
             this.setSkeletonType(1);
-            this.setEquipment(0, new ItemStack(Items.STONE_SWORD));
-            this.getAttributeInstance(GenericAttributes.e).setValue(4.0D);
+            this.setSlot(EnumItemSlot.MAINHAND, new ItemStack(Items.STONE_SWORD));
+            this.getAttributeInstance(GenericAttributes.ATTACK_DAMAGE).setValue(4.0D);
         } else {
-            this.goalSelector.a(4, this.bp);
-            this.bC();
-            this.bD();
+            this.goalSelector.a(4, this.c);
+            this.a(difficultydamagescaler);
+            this.b(difficultydamagescaler);
         }
 
-        this.h(this.random.nextFloat() < 0.55F * this.world.b(this.locX, this.locY, this.locZ));
-        if (this.getEquipment(4) == null) {
-            Calendar calendar = this.world.V();
+        this.l(this.random.nextFloat() < 0.55F * difficultydamagescaler.c());
+        if (this.getEquipment(EnumItemSlot.HEAD) == null) {
+            Calendar calendar = this.world.ac();
 
             if (calendar.get(2) + 1 == 10 && calendar.get(5) == 31 && this.random.nextFloat() < 0.25F) {
-                this.setEquipment(4, new ItemStack(this.random.nextFloat() < 0.1F ? Blocks.JACK_O_LANTERN : Blocks.PUMPKIN));
-                this.dropChances[4] = 0.0F;
+                this.setSlot(EnumItemSlot.HEAD, new ItemStack(this.random.nextFloat() < 0.1F ? Blocks.LIT_PUMPKIN : Blocks.PUMPKIN));
+                this.dropChanceArmor[EnumItemSlot.HEAD.b()] = 0.0F;
             }
         }
 
         return groupdataentity;
     }
 
-    public void bZ() {
-        this.goalSelector.a((PathfinderGoal) this.bq);
-        this.goalSelector.a((PathfinderGoal) this.bp);
-        ItemStack itemstack = this.be();
+    public void o() {
+        if (this.world != null && !this.world.isClientSide) {
+            this.goalSelector.a((PathfinderGoal) this.bv);
+            this.goalSelector.a((PathfinderGoal) this.c);
+            ItemStack itemstack = this.getItemInMainHand();
 
-        if (itemstack != null && itemstack.getItem() == Items.BOW) {
-            this.goalSelector.a(4, this.bp);
-        } else {
-            this.goalSelector.a(4, this.bq);
+            if (itemstack != null && itemstack.getItem() == Items.BOW) {
+                this.goalSelector.a(4, this.c);
+            } else {
+                this.goalSelector.a(4, this.bv);
+            }
         }
+
     }
 
     public void a(EntityLiving entityliving, float f) {
-        EntityArrow entityarrow = new EntityArrow(this.world, this, entityliving, 1.6F, (float) (14 - this.world.difficulty.a() * 4));
-        int i = EnchantmentManager.getEnchantmentLevel(Enchantment.ARROW_DAMAGE.id, this.be());
-        int j = EnchantmentManager.getEnchantmentLevel(Enchantment.ARROW_KNOCKBACK.id, this.be());
+        EntityTippedArrow entitytippedarrow = new EntityTippedArrow(this.world, this);
+        double d0 = entityliving.locX - this.locX;
+        double d1 = entityliving.getBoundingBox().b + (double) (entityliving.length / 3.0F) - entitytippedarrow.locY;
+        double d2 = entityliving.locZ - this.locZ;
+        double d3 = (double) MathHelper.sqrt(d0 * d0 + d2 * d2);
 
-        entityarrow.b((double) (f * 2.0F) + this.random.nextGaussian() * 0.25D + (double) ((float) this.world.difficulty.a() * 0.11F));
+        entitytippedarrow.shoot(d0, d1 + d3 * 0.20000000298023224D, d2, 1.6F, (float) (14 - this.world.getDifficulty().a() * 4));
+        int i = EnchantmentManager.a(Enchantments.ARROW_DAMAGE, (EntityLiving) this);
+        int j = EnchantmentManager.a(Enchantments.ARROW_KNOCKBACK, (EntityLiving) this);
+
+        entitytippedarrow.c((double) (f * 2.0F) + this.random.nextGaussian() * 0.25D + (double) ((float) this.world.getDifficulty().a() * 0.11F));
         if (i > 0) {
-            entityarrow.b(entityarrow.e() + (double) i * 0.5D + 0.5D);
+            entitytippedarrow.c(entitytippedarrow.k() + (double) i * 0.5D + 0.5D);
         }
 
         if (j > 0) {
-            entityarrow.setKnockbackStrength(j);
+            entitytippedarrow.setKnockbackStrength(j);
         }
 
-        if (EnchantmentManager.getEnchantmentLevel(Enchantment.ARROW_FIRE.id, this.be()) > 0 || this.getSkeletonType() == 1) {
+        if (EnchantmentManager.a(Enchantments.ARROW_FIRE, (EntityLiving) this) > 0 || this.getSkeletonType() == 1) {
             // CraftBukkit start - call EntityCombustEvent
-            EntityCombustEvent event = new EntityCombustEvent(entityarrow.getBukkitEntity(), 100);
+            EntityCombustEvent event = new EntityCombustEvent(entitytippedarrow.getBukkitEntity(), 100);
             this.world.getServer().getPluginManager().callEvent(event);
 
             if (!event.isCancelled()) {
-                entityarrow.setOnFire(event.getDuration());
+                entitytippedarrow.setOnFire(event.getDuration());
             }
             // CraftBukkit end
         }
 
         // CraftBukkit start
-        org.bukkit.event.entity.EntityShootBowEvent event = org.bukkit.craftbukkit.event.CraftEventFactory.callEntityShootBowEvent(this, this.be(), entityarrow, 0.8F);
+        org.bukkit.event.entity.EntityShootBowEvent event = org.bukkit.craftbukkit.event.CraftEventFactory.callEntityShootBowEvent(this, this.getItemInMainHand(), entitytippedarrow, 0.8F);
         if (event.isCancelled()) {
             event.getProjectile().remove();
             return;
         }
 
-        if (event.getProjectile() == entityarrow.getBukkitEntity()) {
-            world.addEntity(entityarrow);
+        if (event.getProjectile() == entitytippedarrow.getBukkitEntity()) {
+            world.addEntity(entitytippedarrow);
         }
         // CraftBukkit end
 
-        this.makeSound("random.bow", 1.0F, 1.0F / (this.aI().nextFloat() * 0.4F + 0.8F));
-        // this.world.addEntity(entityarrow); // CraftBukkit - moved up
+        this.a(SoundEffects.fn, 1.0F, 1.0F / (this.getRandom().nextFloat() * 0.4F + 0.8F));
+        // this.world.addEntity(entitytippedarrow); // CraftBukkit - moved up
     }
 
     public int getSkeletonType() {
-        return this.datawatcher.getByte(13);
+        return ((Integer) this.datawatcher.get(EntitySkeleton.a)).intValue();
     }
 
     public void setSkeletonType(int i) {
-        this.datawatcher.watch(13, Byte.valueOf((byte) i));
+        this.datawatcher.set(EntitySkeleton.a, Integer.valueOf(i));
         this.fireProof = i == 1;
+        this.b(i);
+    }
+
+    private void b(int i) {
         if (i == 1) {
-            this.a(0.72F, 2.34F);
+            this.setSize(0.7F, 2.4F);
         } else {
-            this.a(0.6F, 1.8F);
+            this.setSize(0.6F, 1.99F);
         }
+
     }
 
     public void a(NBTTagCompound nbttagcompound) {
@@ -273,7 +275,7 @@ public class EntitySkeleton extends EntityMonster implements IRangedEntity {
             this.setSkeletonType(b0);
         }
 
-        this.bZ();
+        this.o();
     }
 
     public void b(NBTTagCompound nbttagcompound) {
@@ -281,14 +283,23 @@ public class EntitySkeleton extends EntityMonster implements IRangedEntity {
         nbttagcompound.setByte("SkeletonType", (byte) this.getSkeletonType());
     }
 
-    public void setEquipment(int i, ItemStack itemstack) {
-        super.setEquipment(i, itemstack);
-        if (!this.world.isStatic && i == 0) {
-            this.bZ();
+    public void setSlot(EnumItemSlot enumitemslot, ItemStack itemstack) {
+        super.setSlot(enumitemslot, itemstack);
+        if (!this.world.isClientSide && enumitemslot == EnumItemSlot.MAINHAND) {
+            this.o();
         }
+
     }
 
-    public double ad() {
-        return super.ad() - 0.5D;
+    public float getHeadHeight() {
+        return this.getSkeletonType() == 1 ? 2.1F : 1.74F;
+    }
+
+    public double ax() {
+        return -0.35D;
+    }
+
+    public void a(boolean flag) {
+        this.datawatcher.set(EntitySkeleton.b, Boolean.valueOf(flag));
     }
 }
