@@ -1,51 +1,58 @@
 package net.minecraft.server;
 
 // CraftBukkit start
-import org.bukkit.craftbukkit.entity.CraftEntity;
-import org.bukkit.craftbukkit.event.CraftEventFactory;
-import org.bukkit.event.entity.EntityTargetEvent;
 import org.bukkit.event.entity.SlimeSplitEvent;
 // CraftBukkit end
 
 public class EntitySlime extends EntityInsentient implements IMonster {
 
-    public float h;
-    public float i;
-    public float bm;
-    private int jumpDelay;
-    private Entity lastTarget; // CraftBukkit
+    private static final DataWatcherObject<Integer> bt = DataWatcher.a(EntitySlime.class, DataWatcherRegistry.b);
+    public float a;
+    public float b;
+    public float c;
+    private boolean bu;
 
     public EntitySlime(World world) {
         super(world);
-        int i = 1 << this.random.nextInt(3);
-
-        this.height = 0.0F;
-        this.jumpDelay = this.random.nextInt(20) + 10;
-        this.setSize(i);
+        this.moveController = new EntitySlime.ControllerMoveSlime(this);
     }
 
-    protected void c() {
-        super.c();
-        this.datawatcher.a(16, new Byte((byte) 1));
+    protected void r() {
+        this.goalSelector.a(1, new EntitySlime.PathfinderGoalSlimeRandomJump(this));
+        this.goalSelector.a(2, new EntitySlime.PathfinderGoalSlimeNearestPlayer(this));
+        this.goalSelector.a(3, new EntitySlime.PathfinderGoalSlimeRandomDirection(this));
+        this.goalSelector.a(5, new EntitySlime.PathfinderGoalSlimeIdle(this));
+        this.targetSelector.a(1, new PathfinderGoalTargetNearestPlayer(this));
+        this.targetSelector.a(3, new PathfinderGoalNearestAttackableTargetInsentient(this, EntityIronGolem.class));
     }
 
-    // CraftBukkit - protected -> public
+    protected void i() {
+        super.i();
+        this.datawatcher.register(EntitySlime.bt, Integer.valueOf(1));
+    }
+
     public void setSize(int i) {
-        this.datawatcher.watch(16, new Byte((byte) i));
-        this.a(0.6F * (float) i, 0.6F * (float) i);
+        this.datawatcher.set(EntitySlime.bt, Integer.valueOf(i));
+        this.setSize(0.51000005F * (float) i, 0.51000005F * (float) i);
         this.setPosition(this.locX, this.locY, this.locZ);
         this.getAttributeInstance(GenericAttributes.maxHealth).setValue((double) (i * i));
+        this.getAttributeInstance(GenericAttributes.MOVEMENT_SPEED).setValue((double) (0.2F + 0.1F * (float) i));
         this.setHealth(this.getMaxHealth());
-        this.b = i;
+        this.b_ = i;
     }
 
     public int getSize() {
-        return this.datawatcher.getByte(16);
+        return ((Integer) this.datawatcher.get(EntitySlime.bt)).intValue();
     }
 
     public void b(NBTTagCompound nbttagcompound) {
         super.b(nbttagcompound);
         nbttagcompound.setInt("Size", this.getSize() - 1);
+        nbttagcompound.setBoolean("wasOnGround", this.bu);
+    }
+
+    public boolean db() {
+        return this.getSize() <= 1;
     }
 
     public void a(NBTTagCompound nbttagcompound) {
@@ -57,116 +64,78 @@ public class EntitySlime extends EntityInsentient implements IMonster {
         }
 
         this.setSize(i + 1);
+        this.bu = nbttagcompound.getBoolean("wasOnGround");
     }
 
-    protected String bP() {
-        return "slime";
+    protected EnumParticle o() {
+        return EnumParticle.SLIME;
     }
 
-    protected String bV() {
-        return "mob.slime." + (this.getSize() > 1 ? "big" : "small");
-    }
-
-    public void h() {
-        if (!this.world.isStatic && this.world.difficulty == EnumDifficulty.PEACEFUL && this.getSize() > 0) {
+    public void m() {
+        if (!this.world.isClientSide && this.world.getDifficulty() == EnumDifficulty.PEACEFUL && this.getSize() > 0) {
             this.dead = true;
         }
 
-        this.i += (this.h - this.i) * 0.5F;
-        this.bm = this.i;
-        boolean flag = this.onGround;
-
-        super.h();
-        int i;
-
-        if (this.onGround && !flag) {
-            i = this.getSize();
+        this.b += (this.a - this.b) * 0.5F;
+        this.c = this.b;
+        super.m();
+        if (this.onGround && !this.bu) {
+            int i = this.getSize();
 
             for (int j = 0; j < i * 8; ++j) {
-                float f = this.random.nextFloat() * 3.1415927F * 2.0F;
+                float f = this.random.nextFloat() * 6.2831855F;
                 float f1 = this.random.nextFloat() * 0.5F + 0.5F;
                 float f2 = MathHelper.sin(f) * (float) i * 0.5F * f1;
                 float f3 = MathHelper.cos(f) * (float) i * 0.5F * f1;
+                World world = this.world;
+                EnumParticle enumparticle = this.o();
+                double d0 = this.locX + (double) f2;
+                double d1 = this.locZ + (double) f3;
 
-                this.world.addParticle(this.bP(), this.locX + (double) f2, this.boundingBox.b, this.locZ + (double) f3, 0.0D, 0.0D, 0.0D);
+                world.addParticle(enumparticle, d0, this.getBoundingBox().b, d1, 0.0D, 0.0D, 0.0D, new int[0]);
             }
 
-            if (this.bW()) {
-                this.makeSound(this.bV(), this.bf(), ((this.random.nextFloat() - this.random.nextFloat()) * 0.2F + 1.0F) / 0.8F);
-            }
-
-            this.h = -0.5F;
-        } else if (!this.onGround && flag) {
-            this.h = 1.0F;
+            this.a(this.cY(), this.cd(), ((this.random.nextFloat() - this.random.nextFloat()) * 0.2F + 1.0F) / 0.8F);
+            this.a = -0.5F;
+        } else if (!this.onGround && this.bu) {
+            this.a = 1.0F;
         }
 
-        this.bS();
-        if (this.world.isStatic) {
-            i = this.getSize();
-            this.a(0.6F * (float) i, 0.6F * (float) i);
-        }
+        this.bu = this.onGround;
+        this.cV();
     }
 
-    protected void bq() {
-        this.w();
-        // CraftBukkit start
-        Entity entityhuman = this.world.findNearbyVulnerablePlayer(this, 16.0D); // EntityHuman -> Entity
-        EntityTargetEvent event = null;
-
-        if (entityhuman != null && !entityhuman.equals(lastTarget)) {
-            event = CraftEventFactory.callEntityTargetEvent(this, entityhuman, EntityTargetEvent.TargetReason.CLOSEST_PLAYER);
-        } else if (lastTarget != null && entityhuman == null) {
-            event = CraftEventFactory.callEntityTargetEvent(this, entityhuman, EntityTargetEvent.TargetReason.FORGOT_TARGET);
-        }
-
-        if (event != null && !event.isCancelled()) {
-            entityhuman = event.getTarget() == null ? null : ((CraftEntity) event.getTarget()).getHandle();
-        }
-
-        this.lastTarget = entityhuman;
-        // CraftBukkit end
-
-        if (entityhuman != null) {
-            this.a(entityhuman, 10.0F, 20.0F);
-        }
-
-        if (this.onGround && this.jumpDelay-- <= 0) {
-            this.jumpDelay = this.bR();
-            if (entityhuman != null) {
-                this.jumpDelay /= 3;
-            }
-
-            this.bc = true;
-            if (this.bY()) {
-                this.makeSound(this.bV(), this.bf(), ((this.random.nextFloat() - this.random.nextFloat()) * 0.2F + 1.0F) * 0.8F);
-            }
-
-            this.bd = 1.0F - this.random.nextFloat() * 2.0F;
-            this.be = (float) (1 * this.getSize());
-        } else {
-            this.bc = false;
-            if (this.onGround) {
-                this.bd = this.be = 0.0F;
-            }
-        }
+    protected void cV() {
+        this.a *= 0.6F;
     }
 
-    protected void bS() {
-        this.h *= 0.6F;
-    }
-
-    protected int bR() {
+    protected int cU() {
         return this.random.nextInt(20) + 10;
     }
 
-    protected EntitySlime bQ() {
+    protected EntitySlime cT() {
         return new EntitySlime(this.world);
+    }
+
+    public void a(DataWatcherObject<?> datawatcherobject) {
+        if (EntitySlime.bt.equals(datawatcherobject)) {
+            int i = this.getSize();
+
+            this.setSize(0.51000005F * (float) i, 0.51000005F * (float) i);
+            this.yaw = this.aO;
+            this.aM = this.aO;
+            if (this.isInWater() && this.random.nextInt(20) == 0) {
+                this.ak();
+            }
+        }
+
+        super.a(datawatcherobject);
     }
 
     public void die() {
         int i = this.getSize();
 
-        if (!this.world.isStatic && i > 1 && this.getHealth() <= 0.0F) {
+        if (!this.world.isClientSide && i > 1 && this.getHealth() <= 0.0F) {
             int j = 2 + this.random.nextInt(3);
 
             // CraftBukkit start
@@ -184,7 +153,15 @@ public class EntitySlime extends EntityInsentient implements IMonster {
             for (int k = 0; k < j; ++k) {
                 float f = ((float) (k % 2) - 0.5F) * (float) i / 4.0F;
                 float f1 = ((float) (k / 2) - 0.5F) * (float) i / 4.0F;
-                EntitySlime entityslime = this.bQ();
+                EntitySlime entityslime = this.cT();
+
+                if (this.hasCustomName()) {
+                    entityslime.setCustomName(this.getCustomName());
+                }
+
+                if (this.isPersistent()) {
+                    entityslime.cL();
+                }
 
                 entityslime.setSize(i / 2);
                 entityslime.setPositionRotation(this.locX + (double) f, this.locY + 0.5D, this.locZ + (double) f1, this.random.nextFloat() * 360.0F, 0.0F);
@@ -195,51 +172,79 @@ public class EntitySlime extends EntityInsentient implements IMonster {
         super.die();
     }
 
-    public void b_(EntityHuman entityhuman) {
-        if (this.bT()) {
-            int i = this.getSize();
-
-            if (this.hasLineOfSight(entityhuman) && this.f(entityhuman) < 0.6D * (double) i * 0.6D * (double) i && entityhuman.damageEntity(DamageSource.mobAttack(this), (float) this.bU())) {
-                this.makeSound("mob.attack", 1.0F, (this.random.nextFloat() - this.random.nextFloat()) * 0.2F + 1.0F);
-            }
+    public void collide(Entity entity) {
+        super.collide(entity);
+        if (entity instanceof EntityIronGolem && this.cW()) {
+            this.d((EntityLiving) entity);
         }
+
     }
 
-    protected boolean bT() {
-        return this.getSize() > 1;
+    public void d(EntityHuman entityhuman) {
+        if (this.cW()) {
+            this.d((EntityLiving) entityhuman);
+        }
+
     }
 
-    protected int bU() {
+    protected void d(EntityLiving entityliving) {
+        int i = this.getSize();
+
+        if (this.hasLineOfSight(entityliving) && this.h(entityliving) < 0.6D * (double) i * 0.6D * (double) i && entityliving.damageEntity(DamageSource.mobAttack(this), (float) this.cX())) {
+            this.a(SoundEffects.fp, 1.0F, (this.random.nextFloat() - this.random.nextFloat()) * 0.2F + 1.0F);
+            this.a((EntityLiving) this, (Entity) entityliving);
+        }
+
+    }
+
+    public float getHeadHeight() {
+        return 0.625F * this.length;
+    }
+
+    protected boolean cW() {
+        return !this.db();
+    }
+
+    protected int cX() {
         return this.getSize();
     }
 
-    protected String aT() {
-        return "mob.slime." + (this.getSize() > 1 ? "big" : "small");
+    protected SoundEffect bR() {
+        return this.db() ? SoundEffects.fD : SoundEffects.fu;
     }
 
-    protected String aU() {
-        return "mob.slime." + (this.getSize() > 1 ? "big" : "small");
+    protected SoundEffect bS() {
+        return this.db() ? SoundEffects.fC : SoundEffects.fr;
+    }
+
+    protected SoundEffect cY() {
+        return this.db() ? SoundEffects.fF : SoundEffects.fx;
     }
 
     protected Item getLoot() {
-        return this.getSize() == 1 ? Items.SLIME_BALL : Item.getById(0);
+        return this.getSize() == 1 ? Items.SLIME : null;
     }
 
-    public boolean canSpawn() {
-        Chunk chunk = this.world.getChunkAtWorldCoords(MathHelper.floor(this.locX), MathHelper.floor(this.locZ));
+    protected MinecraftKey J() {
+        return this.getSize() == 1 ? LootTables.ac : LootTables.a;
+    }
+
+    public boolean cF() {
+        BlockPosition blockposition = new BlockPosition(MathHelper.floor(this.locX), 0, MathHelper.floor(this.locZ));
+        Chunk chunk = this.world.getChunkAtWorldCoords(blockposition);
 
         if (this.world.getWorldData().getType() == WorldType.FLAT && this.random.nextInt(4) != 1) {
             return false;
         } else {
-            if (this.getSize() == 1 || this.world.difficulty != EnumDifficulty.PEACEFUL) {
-                BiomeBase biomebase = this.world.getBiome(MathHelper.floor(this.locX), MathHelper.floor(this.locZ));
+            if (this.world.getDifficulty() != EnumDifficulty.PEACEFUL) {
+                BiomeBase biomebase = this.world.getBiome(blockposition);
 
-                if (biomebase == BiomeBase.SWAMPLAND && this.locY > 50.0D && this.locY < 70.0D && this.random.nextFloat() < 0.5F && this.random.nextFloat() < this.world.y() && this.world.getLightLevel(MathHelper.floor(this.locX), MathHelper.floor(this.locY), MathHelper.floor(this.locZ)) <= this.random.nextInt(8)) {
-                    return super.canSpawn();
+                if (biomebase == Biomes.h && this.locY > 50.0D && this.locY < 70.0D && this.random.nextFloat() < 0.5F && this.random.nextFloat() < this.world.E() && this.world.getLightLevel(new BlockPosition(this)) <= this.random.nextInt(8)) {
+                    return super.cF();
                 }
 
                 if (this.random.nextInt(10) == 0 && chunk.a(987234911L).nextInt(10) == 0 && this.locY < 40.0D) {
-                    return super.canSpawn();
+                    return super.cF();
                 }
             }
 
@@ -247,19 +252,191 @@ public class EntitySlime extends EntityInsentient implements IMonster {
         }
     }
 
-    protected float bf() {
+    protected float cd() {
         return 0.4F * (float) this.getSize();
     }
 
-    public int x() {
+    public int N() {
         return 0;
     }
 
-    protected boolean bY() {
+    protected boolean dc() {
         return this.getSize() > 0;
     }
 
-    protected boolean bW() {
-        return this.getSize() > 2;
+    protected void ch() {
+        this.motY = 0.41999998688697815D;
+        this.impulse = true;
+    }
+
+    public GroupDataEntity prepare(DifficultyDamageScaler difficultydamagescaler, GroupDataEntity groupdataentity) {
+        int i = this.random.nextInt(3);
+
+        if (i < 2 && this.random.nextFloat() < 0.5F * difficultydamagescaler.c()) {
+            ++i;
+        }
+
+        int j = 1 << i;
+
+        this.setSize(j);
+        return super.prepare(difficultydamagescaler, groupdataentity);
+    }
+
+    protected SoundEffect cZ() {
+        return this.db() ? SoundEffects.fE : SoundEffects.fv;
+    }
+
+    static class PathfinderGoalSlimeIdle extends PathfinderGoal {
+
+        private EntitySlime a;
+
+        public PathfinderGoalSlimeIdle(EntitySlime entityslime) {
+            this.a = entityslime;
+            this.a(5);
+        }
+
+        public boolean a() {
+            return true;
+        }
+
+        public void e() {
+            ((EntitySlime.ControllerMoveSlime) this.a.getControllerMove()).a(1.0D);
+        }
+    }
+
+    static class PathfinderGoalSlimeRandomJump extends PathfinderGoal {
+
+        private EntitySlime a;
+
+        public PathfinderGoalSlimeRandomJump(EntitySlime entityslime) {
+            this.a = entityslime;
+            this.a(5);
+            ((Navigation) entityslime.getNavigation()).c(true);
+        }
+
+        public boolean a() {
+            return this.a.isInWater() || this.a.an();
+        }
+
+        public void e() {
+            if (this.a.getRandom().nextFloat() < 0.8F) {
+                this.a.getControllerJump().a();
+            }
+
+            ((EntitySlime.ControllerMoveSlime) this.a.getControllerMove()).a(1.2D);
+        }
+    }
+
+    static class PathfinderGoalSlimeRandomDirection extends PathfinderGoal {
+
+        private EntitySlime a;
+        private float b;
+        private int c;
+
+        public PathfinderGoalSlimeRandomDirection(EntitySlime entityslime) {
+            this.a = entityslime;
+            this.a(2);
+        }
+
+        public boolean a() {
+            return this.a.getGoalTarget() == null && (this.a.onGround || this.a.isInWater() || this.a.an() || this.a.hasEffect(MobEffects.LEVITATION));
+        }
+
+        public void e() {
+            if (--this.c <= 0) {
+                this.c = 40 + this.a.getRandom().nextInt(60);
+                this.b = (float) this.a.getRandom().nextInt(360);
+            }
+
+            ((EntitySlime.ControllerMoveSlime) this.a.getControllerMove()).a(this.b, false);
+        }
+    }
+
+    static class PathfinderGoalSlimeNearestPlayer extends PathfinderGoal {
+
+        private EntitySlime a;
+        private int b;
+
+        public PathfinderGoalSlimeNearestPlayer(EntitySlime entityslime) {
+            this.a = entityslime;
+            this.a(2);
+        }
+
+        public boolean a() {
+            EntityLiving entityliving = this.a.getGoalTarget();
+
+            return entityliving == null ? false : (!entityliving.isAlive() ? false : !(entityliving instanceof EntityHuman) || !((EntityHuman) entityliving).abilities.isInvulnerable);
+        }
+
+        public void c() {
+            this.b = 300;
+            super.c();
+        }
+
+        public boolean b() {
+            EntityLiving entityliving = this.a.getGoalTarget();
+
+            return entityliving == null ? false : (!entityliving.isAlive() ? false : (entityliving instanceof EntityHuman && ((EntityHuman) entityliving).abilities.isInvulnerable ? false : --this.b > 0));
+        }
+
+        public void e() {
+            this.a.a((Entity) this.a.getGoalTarget(), 10.0F, 10.0F);
+            ((EntitySlime.ControllerMoveSlime) this.a.getControllerMove()).a(this.a.yaw, this.a.cW());
+        }
+    }
+
+    static class ControllerMoveSlime extends ControllerMove {
+
+        private float i;
+        private int j;
+        private EntitySlime k;
+        private boolean l;
+
+        public ControllerMoveSlime(EntitySlime entityslime) {
+            super(entityslime);
+            this.k = entityslime;
+            this.i = 180.0F * entityslime.yaw / 3.1415927F;
+        }
+
+        public void a(float f, boolean flag) {
+            this.i = f;
+            this.l = flag;
+        }
+
+        public void a(double d0) {
+            this.e = d0;
+            this.h = ControllerMove.Operation.MOVE_TO;
+        }
+
+        public void c() {
+            this.a.yaw = this.a(this.a.yaw, this.i, 90.0F);
+            this.a.aO = this.a.yaw;
+            this.a.aM = this.a.yaw;
+            if (this.h != ControllerMove.Operation.MOVE_TO) {
+                this.a.o(0.0F);
+            } else {
+                this.h = ControllerMove.Operation.WAIT;
+                if (this.a.onGround) {
+                    this.a.l((float) (this.e * this.a.getAttributeInstance(GenericAttributes.MOVEMENT_SPEED).getValue()));
+                    if (this.j-- <= 0) {
+                        this.j = this.k.cU();
+                        if (this.l) {
+                            this.j /= 3;
+                        }
+
+                        this.k.getControllerJump().a();
+                        if (this.k.dc()) {
+                            this.k.a(this.k.cZ(), this.k.cd(), ((this.k.getRandom().nextFloat() - this.k.getRandom().nextFloat()) * 0.2F + 1.0F) * 0.8F);
+                        }
+                    } else {
+                        this.k.bd = this.k.be = 0.0F;
+                        this.a.l(0.0F);
+                    }
+                } else {
+                    this.a.l((float) (this.e * this.a.getAttributeInstance(GenericAttributes.MOVEMENT_SPEED).getValue()));
+                }
+
+            }
+        }
     }
 }
