@@ -1,5 +1,7 @@
 package net.minecraft.server;
 
+import com.google.common.base.Predicate;
+import com.google.common.base.Predicates;
 import java.util.Iterator;
 import java.util.List;
 
@@ -11,72 +13,91 @@ import org.bukkit.event.entity.ExplosionPrimeEvent;
 
 public class EntityWither extends EntityMonster implements IRangedEntity {
 
-    private float[] bp = new float[2];
-    private float[] bq = new float[2];
-    private float[] br = new float[2];
-    private float[] bs = new float[2];
-    private int[] bt = new int[2];
-    private int[] bu = new int[2];
-    private int bv;
-    private static final IEntitySelector bw = new EntitySelectorNotUndead();
+    private static final DataWatcherObject<Integer> a = DataWatcher.a(EntityWither.class, DataWatcherRegistry.b);
+    private static final DataWatcherObject<Integer> b = DataWatcher.a(EntityWither.class, DataWatcherRegistry.b);
+    private static final DataWatcherObject<Integer> c = DataWatcher.a(EntityWither.class, DataWatcherRegistry.b);
+    private static final DataWatcherObject<Integer>[] bv = new DataWatcherObject[] { EntityWither.a, EntityWither.b, EntityWither.c};
+    private static final DataWatcherObject<Integer> bw = DataWatcher.a(EntityWither.class, DataWatcherRegistry.b);
+    private float[] bx = new float[2];
+    private float[] by = new float[2];
+    private float[] bz = new float[2];
+    private float[] bA = new float[2];
+    private int[] bB = new int[2];
+    private int[] bC = new int[2];
+    private int bD;
+    private final BossBattleServer bE;
+    private static final Predicate<Entity> bF = new Predicate() {
+        public boolean a(Entity entity) {
+            return entity instanceof EntityLiving && ((EntityLiving) entity).getMonsterType() != EnumMonsterType.UNDEAD;
+        }
+
+        public boolean apply(Object object) {
+            return this.a((Entity) object);
+        }
+    };
 
     public EntityWither(World world) {
         super(world);
+        this.bE = (BossBattleServer) (new BossBattleServer(this.getScoreboardDisplayName(), BossBattle.BarColor.PURPLE, BossBattle.BarStyle.PROGRESS)).setDarkenSky(true);
         this.setHealth(this.getMaxHealth());
-        this.a(0.9F, 4.0F);
+        this.setSize(0.9F, 3.5F);
         this.fireProof = true;
-        this.getNavigation().e(true);
-        this.goalSelector.a(0, new PathfinderGoalFloat(this));
+        ((Navigation) this.getNavigation()).c(true);
+        this.b_ = 50;
+    }
+
+    protected void r() {
+        this.goalSelector.a(0, new EntityWither.a());
+        this.goalSelector.a(1, new PathfinderGoalFloat(this));
         this.goalSelector.a(2, new PathfinderGoalArrowAttack(this, 1.0D, 40, 20.0F));
         this.goalSelector.a(5, new PathfinderGoalRandomStroll(this, 1.0D));
         this.goalSelector.a(6, new PathfinderGoalLookAtPlayer(this, EntityHuman.class, 8.0F));
         this.goalSelector.a(7, new PathfinderGoalRandomLookaround(this));
-        this.targetSelector.a(1, new PathfinderGoalHurtByTarget(this, false));
-        this.targetSelector.a(2, new PathfinderGoalNearestAttackableTarget(this, EntityInsentient.class, 0, false, false, bw));
-        this.b = 50;
+        this.targetSelector.a(1, new PathfinderGoalHurtByTarget(this, false, new Class[0]));
+        this.targetSelector.a(2, new PathfinderGoalNearestAttackableTarget(this, EntityInsentient.class, 0, false, false, EntityWither.bF));
     }
 
-    protected void c() {
-        super.c();
-        this.datawatcher.a(17, new Integer(0));
-        this.datawatcher.a(18, new Integer(0));
-        this.datawatcher.a(19, new Integer(0));
-        this.datawatcher.a(20, new Integer(0));
+    protected void i() {
+        super.i();
+        this.datawatcher.register(EntityWither.a, Integer.valueOf(0));
+        this.datawatcher.register(EntityWither.b, Integer.valueOf(0));
+        this.datawatcher.register(EntityWither.c, Integer.valueOf(0));
+        this.datawatcher.register(EntityWither.bw, Integer.valueOf(0));
     }
 
     public void b(NBTTagCompound nbttagcompound) {
         super.b(nbttagcompound);
-        nbttagcompound.setInt("Invul", this.ca());
+        nbttagcompound.setInt("Invul", this.cZ());
     }
 
     public void a(NBTTagCompound nbttagcompound) {
         super.a(nbttagcompound);
-        this.s(nbttagcompound.getInt("Invul"));
+        this.l(nbttagcompound.getInt("Invul"));
     }
 
-    protected String t() {
-        return "mob.wither.idle";
+    protected SoundEffect G() {
+        return SoundEffects.gE;
     }
 
-    protected String aT() {
-        return "mob.wither.hurt";
+    protected SoundEffect bR() {
+        return SoundEffects.gH;
     }
 
-    protected String aU() {
-        return "mob.wither.death";
+    protected SoundEffect bS() {
+        return SoundEffects.gG;
     }
 
-    public void e() {
+    public void n() {
         this.motY *= 0.6000000238418579D;
         double d0;
         double d1;
         double d2;
 
-        if (!this.world.isStatic && this.t(0) > 0) {
-            Entity entity = this.world.getEntity(this.t(0));
+        if (!this.world.isClientSide && this.m(0) > 0) {
+            Entity entity = this.world.getEntity(this.m(0));
 
             if (entity != null) {
-                if (this.locY < entity.locY || !this.cb() && this.locY < entity.locY + 5.0D) {
+                if (this.locY < entity.locY || !this.da() && this.locY < entity.locY + 5.0D) {
                     if (this.motY < 0.0D) {
                         this.motY = 0.0D;
                     }
@@ -97,22 +118,22 @@ public class EntityWither extends EntityMonster implements IRangedEntity {
         }
 
         if (this.motX * this.motX + this.motZ * this.motZ > 0.05000000074505806D) {
-            this.yaw = (float) Math.atan2(this.motZ, this.motX) * 57.295776F - 90.0F;
+            this.yaw = (float) MathHelper.b(this.motZ, this.motX) * 57.295776F - 90.0F;
         }
 
-        super.e();
+        super.n();
 
         int i;
 
         for (i = 0; i < 2; ++i) {
-            this.bs[i] = this.bq[i];
-            this.br[i] = this.bp[i];
+            this.bA[i] = this.by[i];
+            this.bz[i] = this.bx[i];
         }
 
         int j;
 
         for (i = 0; i < 2; ++i) {
-            j = this.t(i + 1);
+            j = this.m(i + 1);
             Entity entity1 = null;
 
             if (j > 0) {
@@ -120,50 +141,52 @@ public class EntityWither extends EntityMonster implements IRangedEntity {
             }
 
             if (entity1 != null) {
-                d0 = this.u(i + 1);
-                d1 = this.v(i + 1);
-                d2 = this.w(i + 1);
+                d0 = this.n(i + 1);
+                d1 = this.o(i + 1);
+                d2 = this.p(i + 1);
                 double d4 = entity1.locX - d0;
                 double d5 = entity1.locY + (double) entity1.getHeadHeight() - d1;
                 double d6 = entity1.locZ - d2;
                 double d7 = (double) MathHelper.sqrt(d4 * d4 + d6 * d6);
-                float f = (float) (Math.atan2(d6, d4) * 180.0D / 3.1415927410125732D) - 90.0F;
-                float f1 = (float) (-(Math.atan2(d5, d7) * 180.0D / 3.1415927410125732D));
+                float f = (float) (MathHelper.b(d6, d4) * 57.2957763671875D) - 90.0F;
+                float f1 = (float) (-(MathHelper.b(d5, d7) * 57.2957763671875D));
 
-                this.bp[i] = this.b(this.bp[i], f1, 40.0F);
-                this.bq[i] = this.b(this.bq[i], f, 10.0F);
+                this.bx[i] = this.b(this.bx[i], f1, 40.0F);
+                this.by[i] = this.b(this.by[i], f, 10.0F);
             } else {
-                this.bq[i] = this.b(this.bq[i], this.aM, 10.0F);
+                this.by[i] = this.b(this.by[i], this.aM, 10.0F);
             }
         }
 
-        boolean flag = this.cb();
+        boolean flag = this.da();
 
         for (j = 0; j < 3; ++j) {
-            double d8 = this.u(j);
-            double d9 = this.v(j);
-            double d10 = this.w(j);
+            double d8 = this.n(j);
+            double d9 = this.o(j);
+            double d10 = this.p(j);
 
-            this.world.addParticle("smoke", d8 + this.random.nextGaussian() * 0.30000001192092896D, d9 + this.random.nextGaussian() * 0.30000001192092896D, d10 + this.random.nextGaussian() * 0.30000001192092896D, 0.0D, 0.0D, 0.0D);
+            this.world.addParticle(EnumParticle.SMOKE_NORMAL, d8 + this.random.nextGaussian() * 0.30000001192092896D, d9 + this.random.nextGaussian() * 0.30000001192092896D, d10 + this.random.nextGaussian() * 0.30000001192092896D, 0.0D, 0.0D, 0.0D, new int[0]);
             if (flag && this.world.random.nextInt(4) == 0) {
-                this.world.addParticle("mobSpell", d8 + this.random.nextGaussian() * 0.30000001192092896D, d9 + this.random.nextGaussian() * 0.30000001192092896D, d10 + this.random.nextGaussian() * 0.30000001192092896D, 0.699999988079071D, 0.699999988079071D, 0.5D);
+                this.world.addParticle(EnumParticle.SPELL_MOB, d8 + this.random.nextGaussian() * 0.30000001192092896D, d9 + this.random.nextGaussian() * 0.30000001192092896D, d10 + this.random.nextGaussian() * 0.30000001192092896D, 0.699999988079071D, 0.699999988079071D, 0.5D, new int[0]);
             }
         }
 
-        if (this.ca() > 0) {
+        if (this.cZ() > 0) {
             for (j = 0; j < 3; ++j) {
-                this.world.addParticle("mobSpell", this.locX + this.random.nextGaussian() * 1.0D, this.locY + (double) (this.random.nextFloat() * 3.3F), this.locZ + this.random.nextGaussian() * 1.0D, 0.699999988079071D, 0.699999988079071D, 0.8999999761581421D);
+                this.world.addParticle(EnumParticle.SPELL_MOB, this.locX + this.random.nextGaussian(), this.locY + (double) (this.random.nextFloat() * 3.3F), this.locZ + this.random.nextGaussian(), 0.699999988079071D, 0.699999988079071D, 0.8999999761581421D, new int[0]);
             }
         }
+
     }
 
-    protected void bn() {
+    protected void M() {
         int i;
 
-        if (this.ca() > 0) {
-            i = this.ca() - 1;
+        if (this.cZ() > 0) {
+            i = this.cZ() - 1;
             if (i <= 0) {
                 // CraftBukkit start
+                // this.world.createExplosion(this, this.locX, this.locY + (double) this.getHeadHeight(), this.locZ, 7.0F, false, this.world.getGameRules().getBoolean("mobGriefing"));
                 ExplosionPrimeEvent event = new ExplosionPrimeEvent(this.getBukkitEntity(), 7.0F, false);
                 this.world.getServer().getPluginManager().callEvent(event);
 
@@ -172,44 +195,45 @@ public class EntityWither extends EntityMonster implements IRangedEntity {
                 }
                 // CraftBukkit end
 
-                this.world.createExplosion(this, this.locX, this.locY + (double) this.getHeadHeight(), this.locZ, 7.0F, false, this.world.getGameRules().getBoolean("mobGriefing"));
                 // CraftBukkit start - Use relative location for far away sounds
-                //this.world.b(1013, (int) this.locX, (int) this.locY, (int) this.locZ, 0);
+                // this.world.a(1023, new BlockPosition(this), 0);
                 int viewDistance = ((WorldServer) this.world).getServer().getViewDistance() * 16;
-                for (EntityPlayer player : (List<EntityPlayer>) this.world.players) {
+                for (EntityPlayer player : (List<EntityPlayer>) MinecraftServer.getServer().getPlayerList().players) {
                     double deltaX = this.locX - player.locX;
                     double deltaZ = this.locZ - player.locZ;
                     double distanceSquared = deltaX * deltaX + deltaZ * deltaZ;
+                    if ( world.spigotConfig.witherSpawnSoundRadius > 0 && distanceSquared > world.spigotConfig.witherSpawnSoundRadius * world.spigotConfig.witherSpawnSoundRadius ) continue; // Spigot
                     if (distanceSquared > viewDistance * viewDistance) {
                         double deltaLength = Math.sqrt(distanceSquared);
                         double relativeX = player.locX + (deltaX / deltaLength) * viewDistance;
                         double relativeZ = player.locZ + (deltaZ / deltaLength) * viewDistance;
-                        player.playerConnection.sendPacket(new PacketPlayOutWorldEvent(1013, (int) relativeX, (int) this.locY, (int) relativeZ, 0, true));
+                        player.playerConnection.sendPacket(new PacketPlayOutWorldEvent(1013, new BlockPosition((int) relativeX, (int) this.locY, (int) relativeZ), 0, true));
                     } else {
-                        player.playerConnection.sendPacket(new PacketPlayOutWorldEvent(1013, (int) this.locX, (int) this.locY, (int) this.locZ, 0, true));
+                        player.playerConnection.sendPacket(new PacketPlayOutWorldEvent(1013, new BlockPosition((int) this.locX, (int) this.locY, (int) this.locZ), 0, true));
                     }
                 }
                 // CraftBukkit end
             }
 
-            this.s(i);
+            this.l(i);
             if (this.ticksLived % 10 == 0) {
                 this.heal(10.0F, EntityRegainHealthEvent.RegainReason.WITHER_SPAWN); // CraftBukkit
             }
+
         } else {
-            super.bn();
+            super.M();
 
             int j;
 
             for (i = 1; i < 3; ++i) {
-                if (this.ticksLived >= this.bt[i - 1]) {
-                    this.bt[i - 1] = this.ticksLived + 10 + this.random.nextInt(10);
-                    if (this.world.difficulty == EnumDifficulty.NORMAL || this.world.difficulty == EnumDifficulty.HARD) {
-                        int i1001 = i - 1;
-                        int i1003 = this.bu[i - 1];
+                if (this.ticksLived >= this.bB[i - 1]) {
+                    this.bB[i - 1] = this.ticksLived + 10 + this.random.nextInt(10);
+                    if (this.world.getDifficulty() == EnumDifficulty.NORMAL || this.world.getDifficulty() == EnumDifficulty.HARD) {
+                        int k = i - 1;
+                        int l = this.bC[i - 1];
 
-                        this.bu[i1001] = this.bu[i - 1] + 1;
-                        if (i1003 > 15) {
+                        this.bC[k] = this.bC[i - 1] + 1;
+                        if (l > 15) {
                             float f = 10.0F;
                             float f1 = 5.0F;
                             double d0 = MathHelper.a(this.random, this.locX - (double) f, this.locX + (double) f);
@@ -217,23 +241,27 @@ public class EntityWither extends EntityMonster implements IRangedEntity {
                             double d2 = MathHelper.a(this.random, this.locZ - (double) f, this.locZ + (double) f);
 
                             this.a(i + 1, d0, d1, d2, true);
-                            this.bu[i - 1] = 0;
+                            this.bC[i - 1] = 0;
                         }
                     }
 
-                    j = this.t(i);
+                    j = this.m(i);
                     if (j > 0) {
                         Entity entity = this.world.getEntity(j);
 
-                        if (entity != null && entity.isAlive() && this.f(entity) <= 900.0D && this.hasLineOfSight(entity)) {
-                            this.a(i + 1, (EntityLiving) entity);
-                            this.bt[i - 1] = this.ticksLived + 40 + this.random.nextInt(20);
-                            this.bu[i - 1] = 0;
+                        if (entity != null && entity.isAlive() && this.h(entity) <= 900.0D && this.hasLineOfSight(entity)) {
+                            if (entity instanceof EntityHuman && ((EntityHuman) entity).abilities.isInvulnerable) {
+                                this.a(i, 0);
+                            } else {
+                                this.a(i + 1, (EntityLiving) entity);
+                                this.bB[i - 1] = this.ticksLived + 40 + this.random.nextInt(20);
+                                this.bC[i - 1] = 0;
+                            }
                         } else {
-                            this.b(i, 0);
+                            this.a(i, 0);
                         }
                     } else {
-                        List list = this.world.a(EntityLiving.class, this.boundingBox.grow(20.0D, 8.0D, 20.0D), bw);
+                        List list = this.world.a(EntityLiving.class, this.getBoundingBox().grow(20.0D, 8.0D, 20.0D), Predicates.and(EntityWither.bF, IEntitySelector.e));
 
                         for (int i1 = 0; i1 < 10 && !list.isEmpty(); ++i1) {
                             EntityLiving entityliving = (EntityLiving) list.get(this.random.nextInt(list.size()));
@@ -241,10 +269,10 @@ public class EntityWither extends EntityMonster implements IRangedEntity {
                             if (entityliving != this && entityliving.isAlive() && this.hasLineOfSight(entityliving)) {
                                 if (entityliving instanceof EntityHuman) {
                                     if (!((EntityHuman) entityliving).abilities.isInvulnerable) {
-                                        this.b(i, entityliving.getId());
+                                        this.a(i, entityliving.getId());
                                     }
                                 } else {
-                                    this.b(i, entityliving.getId());
+                                    this.a(i, entityliving.getId());
                                 }
                                 break;
                             }
@@ -256,14 +284,14 @@ public class EntityWither extends EntityMonster implements IRangedEntity {
             }
 
             if (this.getGoalTarget() != null) {
-                this.b(0, this.getGoalTarget().getId());
+                this.a(0, this.getGoalTarget().getId());
             } else {
-                this.b(0, 0);
+                this.a(0, 0);
             }
 
-            if (this.bv > 0) {
-                --this.bv;
-                if (this.bv == 0 && this.world.getGameRules().getBoolean("mobGriefing")) {
+            if (this.bD > 0) {
+                --this.bD;
+                if (this.bD == 0 && this.world.getGameRules().getBoolean("mobGriefing")) {
                     i = MathHelper.floor(this.locY);
                     j = MathHelper.floor(this.locX);
                     int j1 = MathHelper.floor(this.locZ);
@@ -275,23 +303,24 @@ public class EntityWither extends EntityMonster implements IRangedEntity {
                                 int j2 = j + k1;
                                 int k2 = i + i2;
                                 int l2 = j1 + l1;
-                                Block block = this.world.getType(j2, k2, l2);
+                                BlockPosition blockposition = new BlockPosition(j2, k2, l2);
+                                IBlockData iblockdata = this.world.getType(blockposition);
+                                Block block = iblockdata.getBlock();
 
-                                if (block.getMaterial() != Material.AIR && block != Blocks.BEDROCK && block != Blocks.ENDER_PORTAL && block != Blocks.ENDER_PORTAL_FRAME && block != Blocks.COMMAND) {
+                                if (iblockdata.getMaterial() != Material.AIR && a(block)) {
                                     // CraftBukkit start
                                     if (CraftEventFactory.callEntityChangeBlockEvent(this, j2, k2, l2, Blocks.AIR, 0).isCancelled()) {
                                         continue;
                                     }
                                     // CraftBukkit end
-
-                                    flag = this.world.setAir(j2, k2, l2, true) || flag;
+                                    flag = this.world.setAir(blockposition, true) || flag;
                                 }
                             }
                         }
                     }
 
                     if (flag) {
-                        this.world.a((EntityHuman) null, 1012, (int) this.locX, (int) this.locY, (int) this.locZ, 0);
+                        this.world.a((EntityHuman) null, 1022, new BlockPosition(this), 0);
                     }
                 }
             }
@@ -299,40 +328,52 @@ public class EntityWither extends EntityMonster implements IRangedEntity {
             if (this.ticksLived % 20 == 0) {
                 this.heal(1.0F, EntityRegainHealthEvent.RegainReason.REGEN); // CraftBukkit
             }
+
+            this.bE.setProgress(this.getHealth() / this.getMaxHealth());
         }
     }
 
-    public void bZ() {
-        this.s(220);
+    public static boolean a(Block block) {
+        return block != Blocks.BEDROCK && block != Blocks.END_PORTAL && block != Blocks.END_PORTAL_FRAME && block != Blocks.COMMAND_BLOCK && block != Blocks.dc && block != Blocks.dd && block != Blocks.BARRIER;
+    }
+
+    public void o() {
+        this.l(220);
         this.setHealth(this.getMaxHealth() / 3.0F);
     }
 
-    public void as() {}
+    public void aQ() {}
 
-    public int aV() {
-        return 4;
+    public void b(EntityPlayer entityplayer) {
+        super.b(entityplayer);
+        this.bE.addPlayer(entityplayer);
     }
 
-    private double u(int i) {
+    public void c(EntityPlayer entityplayer) {
+        super.c(entityplayer);
+        this.bE.removePlayer(entityplayer);
+    }
+
+    private double n(int i) {
         if (i <= 0) {
             return this.locX;
         } else {
-            float f = (this.aM + (float) (180 * (i - 1))) / 180.0F * 3.1415927F;
+            float f = (this.aM + (float) (180 * (i - 1))) * 0.017453292F;
             float f1 = MathHelper.cos(f);
 
             return this.locX + (double) f1 * 1.3D;
         }
     }
 
-    private double v(int i) {
+    private double o(int i) {
         return i <= 0 ? this.locY + 3.0D : this.locY + 2.2D;
     }
 
-    private double w(int i) {
+    private double p(int i) {
         if (i <= 0) {
             return this.locZ;
         } else {
-            float f = (this.aM + (float) (180 * (i - 1))) / 180.0F * 3.1415927F;
+            float f = (this.aM + (float) (180 * (i - 1))) * 0.017453292F;
             float f1 = MathHelper.sin(f);
 
             return this.locZ + (double) f1 * 1.3D;
@@ -358,10 +399,10 @@ public class EntityWither extends EntityMonster implements IRangedEntity {
     }
 
     private void a(int i, double d0, double d1, double d2, boolean flag) {
-        this.world.a((EntityHuman) null, 1014, (int) this.locX, (int) this.locY, (int) this.locZ, 0);
-        double d3 = this.u(i);
-        double d4 = this.v(i);
-        double d5 = this.w(i);
+        this.world.a((EntityHuman) null, 1024, new BlockPosition(this), 0);
+        double d3 = this.n(i);
+        double d4 = this.o(i);
+        double d5 = this.p(i);
         double d6 = d0 - d3;
         double d7 = d1 - d4;
         double d8 = d2 - d5;
@@ -382,88 +423,93 @@ public class EntityWither extends EntityMonster implements IRangedEntity {
     }
 
     public boolean damageEntity(DamageSource damagesource, float f) {
-        if (this.isInvulnerable()) {
+        if (this.isInvulnerable(damagesource)) {
             return false;
-        } else if (damagesource == DamageSource.DROWN) {
-            return false;
-        } else if (this.ca() > 0) {
-            return false;
-        } else {
-            Entity entity;
-
-            if (this.cb()) {
-                entity = damagesource.i();
-                if (entity instanceof EntityArrow) {
-                    return false;
-                }
-            }
-
-            entity = damagesource.getEntity();
-            if (entity != null && !(entity instanceof EntityHuman) && entity instanceof EntityLiving && ((EntityLiving) entity).getMonsterType() == this.getMonsterType()) {
+        } else if (damagesource != DamageSource.DROWN && !(damagesource.getEntity() instanceof EntityWither)) {
+            if (this.cZ() > 0 && damagesource != DamageSource.OUT_OF_WORLD) {
                 return false;
             } else {
-                if (this.bv <= 0) {
-                    this.bv = 20;
+                Entity entity;
+
+                if (this.da()) {
+                    entity = damagesource.i();
+                    if (entity instanceof EntityArrow) {
+                        return false;
+                    }
                 }
 
-                for (int i = 0; i < this.bu.length; ++i) {
-                    this.bu[i] += 3;
-                }
+                entity = damagesource.getEntity();
+                if (entity != null && !(entity instanceof EntityHuman) && entity instanceof EntityLiving && ((EntityLiving) entity).getMonsterType() == this.getMonsterType()) {
+                    return false;
+                } else {
+                    if (this.bD <= 0) {
+                        this.bD = 20;
+                    }
 
-                return super.damageEntity(damagesource, f);
+                    for (int i = 0; i < this.bC.length; ++i) {
+                        this.bC[i] += 3;
+                    }
+
+                    return super.damageEntity(damagesource, f);
+                }
             }
+        } else {
+            return false;
         }
     }
 
     protected void dropDeathLoot(boolean flag, int i) {
-        this.a(Items.NETHER_STAR, 1);
-        if (!this.world.isStatic) {
-            Iterator iterator = this.world.a(EntityHuman.class, this.boundingBox.grow(50.0D, 100.0D, 50.0D)).iterator();
+        EntityItem entityitem = this.a(Items.NETHER_STAR, 1);
+
+        if (entityitem != null) {
+            entityitem.v();
+        }
+
+        if (!this.world.isClientSide) {
+            Iterator iterator = this.world.a(EntityHuman.class, this.getBoundingBox().grow(50.0D, 100.0D, 50.0D)).iterator();
 
             while (iterator.hasNext()) {
                 EntityHuman entityhuman = (EntityHuman) iterator.next();
 
-                entityhuman.a((Statistic) AchievementList.J);
+                entityhuman.b((Statistic) AchievementList.J);
             }
         }
+
     }
 
-    protected void w() {
-        this.aU = 0;
+    protected void L() {
+        this.ticksFarFromPlayer = 0;
     }
 
-    protected void b(float f) {}
+    public void e(float f, float f1) {}
 
     public void addEffect(MobEffect mobeffect) {}
 
-    protected boolean bk() {
-        return true;
-    }
-
-    protected void aD() {
-        super.aD();
+    protected void initAttributes() {
+        super.initAttributes();
         this.getAttributeInstance(GenericAttributes.maxHealth).setValue(300.0D);
-        this.getAttributeInstance(GenericAttributes.d).setValue(0.6000000238418579D);
-        this.getAttributeInstance(GenericAttributes.b).setValue(40.0D);
+        this.getAttributeInstance(GenericAttributes.MOVEMENT_SPEED).setValue(0.6000000238418579D);
+        this.getAttributeInstance(GenericAttributes.FOLLOW_RANGE).setValue(40.0D);
+        this.getAttributeInstance(GenericAttributes.g).setValue(4.0D);
     }
 
-    public int ca() {
-        return this.datawatcher.getInt(20);
+    public int cZ() {
+        return ((Integer) this.datawatcher.get(EntityWither.bw)).intValue();
     }
 
-    public void s(int i) {
-        this.datawatcher.watch(20, Integer.valueOf(i));
+    public void l(int i) {
+        this.datawatcher.set(EntityWither.bw, Integer.valueOf(i));
     }
 
-    public int t(int i) {
-        return this.datawatcher.getInt(17 + i);
+    public int m(int i) {
+        return ((Integer) this.datawatcher.get(EntityWither.bv[i])).intValue();
     }
 
-    public void b(int i, int j) {
-        this.datawatcher.watch(17 + i, Integer.valueOf(j));
+    public void a(int i, int j) {
+        this.datawatcher.set(EntityWither.bv[i], Integer.valueOf(j));
     }
 
-    public boolean cb() {
+    public boolean da() {
         return this.getHealth() <= this.getMaxHealth() / 2.0F;
     }
 
@@ -471,7 +517,22 @@ public class EntityWither extends EntityMonster implements IRangedEntity {
         return EnumMonsterType.UNDEAD;
     }
 
-    public void mount(Entity entity) {
-        this.vehicle = null;
+    protected boolean n(Entity entity) {
+        return false;
+    }
+
+    public boolean aV() {
+        return false;
+    }
+
+    class a extends PathfinderGoal {
+
+        public a() {
+            this.a(7);
+        }
+
+        public boolean a() {
+            return EntityWither.this.cZ() > 0;
+        }
     }
 }
